--- a/Languages/default-ar.xml
+++ b/Languages/default-ar.xml
@@ -354,6 +354,7 @@
 			<button id="ID_NETWORK_G1" text="Gnutella1"/>
 			<button id="ID_NETWORK_ED2K" text="eDonkey"/>
 			<button id="ID_NETWORK_DC" text="DC++"/>
+			<button id="ID_NETWORK_BT" text="BitTorrent"/>
 			<separator/>
 			<button id="ID_NEIGHBOURS_SETTINGS" text="إعدادات"/>
 		</toolbar>
@@ -369,6 +370,7 @@
 			<button id="ID_NETWORK_G1" text="Gnutella1"/>
 			<button id="ID_NETWORK_ED2K" text="eDonkey"/>
 			<button id="ID_NETWORK_DC" text="DC++"/>
+			<button id="ID_NETWORK_BT" text="BitTorrent"/>
 			<separator/>
 			<button id="ID_NEIGHBOURS_SETTINGS" text="إعدادات"/>
 		</toolbar>
@@ -506,6 +508,7 @@
 					<item id="ID_NETWORK_G1" text="الإتصال بـ Gnutella_1"/>
 					<item id="ID_NETWORK_ED2K" text="_الإتصال بـ eDonkey2000"/>
 					<item id="ID_NETWORK_DC" text="Connect to _DC++"/>
+					<item id="ID_NETWORK_BT" text="Connect to _BitTorrent"/>
 				</menu>
 				<separator/>
 				<item id="ID_NETWORK_AUTO_CLOSE" text="الخروج عند إنتهاء _ نقل البيانات"/>
@@ -543,7 +546,7 @@
 				<item id="ID_TOOLS_PROFILE" text="تحرير _ملفي الخاص..."/>
 				<item id="ID_TOOLS_WIZARD" text="معالج ال_تشغيل السريع..."/>
 				<separator/>
-				<item id="ID_TOOLS_SETTINGS" text="إ_عدادات Shareaza"/>
+				<item id="ID_TOOLS_SETTINGS" text="إ_عدادات Shareaza" shortcut="Ctrl+P"/>
 			</menu>
 			<menu text="_تعليمات">
 				<item id="ID_HELP_FAQ" text="مستخدمي _دليل Shareaza"/>
@@ -583,6 +586,7 @@
 					<item id="ID_NETWORK_G1" text="الإتصال بـ Gnutella_1"/>
 					<item id="ID_NETWORK_ED2K" text="_الإتصال بـ eDonkey2000"/>
 					<item id="ID_NETWORK_DC" text="Connect to _DC++"/>
+					<item id="ID_NETWORK_BT" text="Connect to _BitTorrent"/>
 				</menu>
 				<separator/>
 				<item id="ID_NETWORK_CONNECT_TO" text="الإتصال _بـ..." shortcut="Ctrl+T"/>
@@ -641,7 +645,7 @@
 				<item id="ID_TOOLS_PROFILE" text="تحرير _ملفي الخاص..."/>
 				<item id="ID_TOOLS_WIZARD" text="معالج ال_تشغيل السريع..."/>
 				<separator/>
-				<item id="ID_TOOLS_SETTINGS" text="إ_عدادات Shareaza"/>
+				<item id="ID_TOOLS_SETTINGS" text="إ_عدادات Shareaza" shortcut="Ctrl+P"/>
 			</menu>
 			<menu text="_نافذة">
 				<item id="ID_WINDOW_NAVBAR" text="عرض _عامود التصفح"/>
@@ -695,6 +699,7 @@
 					<item id="ID_NETWORK_G1" text="الإتصال بـ Gnutella_1"/>
 					<item id="ID_NETWORK_ED2K" text="_الإتصال بـ eDonkey2000"/>
 					<item id="ID_NETWORK_DC" text="Connect to _DC++"/>
+					<item id="ID_NETWORK_BT" text="Connect to _BitTorrent"/>
 				</menu>
 				<separator/>
 				<item id="ID_NETWORK_AUTO_CLOSE" text="الإغلاق _عند اتمام نقل البيانات"/>
@@ -735,7 +740,7 @@
 				<item id="ID_TOOLS_PROFILE" text="تحرير _ملفي الخاص..."/>
 				<separator/>
 				<item id="ID_TOOLS_WIZARD" text="معالج ال_تشغيل السريع..."/>
-				<item id="ID_TOOLS_SETTINGS" text="إ_عدادات Shareaza"/>
+				<item id="ID_TOOLS_SETTINGS" text="إ_عدادات Shareaza" shortcut="Ctrl+P"/>
 			</menu>
 			<menu text="_نافذة">
 				<item id="ID_WINDOW_CASCADE" text="_شاشة كاملة"/>
@@ -1524,6 +1529,7 @@
 				<item id="ID_NETWORK_G1" text="Gnutella_1"/>
 				<item id="ID_NETWORK_ED2K" text="_eDonkey"/>
 				<item id="ID_NETWORK_DC" text="_DC++"/>
+				<item id="ID_NETWORK_BT" text="_BitTorrent"/>
 			</menu>
 			<menu text="_شاشة">
 				<item id="ID_NEIGHBOURS_VIEW_ALL" text="عرض _كافة حركات المرور"/>
@@ -2556,6 +2562,7 @@
 		<tip id="ID_NEIGHBOURS_VIEW_OUTGOING" message="لمراقبة حركة المرور الصادرة إلى هذا الجوار Packet Dump فتح نافذة"/>
 		<tip id="ID_NETWORK_AUTO_CLOSE" message="إغلاق شير-أزا آليا عندما يكتمل النقل"/>
 		<tip id="ID_NETWORK_BROWSE_TO" message="تصفح المستخدم لعرض الوضعيات و الملفات المشتركة..."/>
+		<tip id="ID_NETWORK_BT" message="Connect to the BitTorrent network."/>
 		<tip id="ID_NETWORK_CHAT_TO" message="Open a chat session with a user..."/>
 		<tip id="ID_NETWORK_CONNECT" message="الإتصال بالشبكات المحددة"/>
 		<tip id="ID_NETWORK_CONNECT_TO" message="الإتصال يدويا بمضيف..."/>
@@ -3747,51 +3754,52 @@
 			<control caption="طرفي إلى محوري"/>
 			<control caption="محوري إلى محوري"/>
 		</dialog>
-		<dialog name="CDonkeySettingsPage" cookie="BuBuBuBuBuStEdmsStBuBuStEdmsStBuStBu" caption="eDonkey">
-			<control caption=":_eDonkey شبكة"/>
+		<dialog name="CDonkeySettingsPage" cookie="BuBuBuEdmsBuEdmsBuBuBuStStBuStStBuSt" caption="eDonkey">
 			<control caption="eDonkey الإتصال دائما بـ"/>
 			<control caption="eDonkey الإتصال اليوم بـ"/>
-			<control caption=":_البحث العالمي"/>
 			<control caption="البحث في الملقمات البعيدة في مخزون الملقم المؤقت:"/>
-			<control caption=":توقف عن البحث بعد"/>
 			<control/>
 			<control/>
-			<control caption="نتيجة بحث"/>
 			<control caption="إستقبال و تحديث قائمة الملقم من الملقم المتصل"/>
+			<control/>
+			<control/>
+			<control caption="تحميل..."/>
+			<control caption=":_eDonkey شبكة"/>
+			<control caption=":_البحث العالمي"/>
+			<control caption=":توقف عن البحث بعد"/>
+			<control caption="نتيجة بحث"/>
 			<control caption=":_إتصالات إرتباط العميل"/>
 			<control caption=":الإتصال باكثر من"/>
-			<control/>
-			<control/>
 			<control caption=" eDonkey عميل آخر لبرنامج"/>
 			<control caption=":eDonkey _أدوات"/>
 			<control caption=":من الانترنت eDonkey تحميل قائمة ملقم"/>
-			<control caption="تحميل..."/>
 		</dialog>
-		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsStEdmsStBuEdmsStBuBuBuBuEdBuBuEdBuStEd" caption="BitTorrent">
-			<control caption=":_الواجهة"/>
-			<control caption="الإضافية BitTorrent عرض عناصر واجهة"/>
-			<control caption=":إ_تصالات التحميل"/>
+		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsEdmsBuEdmsBuBuEdBuEdBuEdBuBuBuStStStStBu" caption="BitTorrent">
+			<control caption="Always connect to BitTorrent"/>
+			<control caption="Connect to BitTorrent today"/>
+			<control caption="Enable BitTorrent DHT"/>
 			<control/>
 			<control/>
-			<control caption="معا Torrents عمليات"/>
 			<control/>
 			<control/>
-			<control caption="إتصالات العميل"/>
 			<control caption="المحملة        عندما يصل معدل المشاركة torrent مسح ملفات"/>
 			<control/>
 			<control/>
-			<control caption="%"/>
 			<control caption=" المفضلة torrent مصادر"/>
-			<control caption=":المرحلة ال_ختامية"/>
 			<control caption="torrent تمكين نمط المرحلة الختامية عند إكتمال ملفات"/>
+			<control/>
+			<control/>
+			<control/>
+			<control/>
+			<control/>
+			<control caption="_BitTorrent Network:"/>
+			<control caption=":إ_تصالات التحميل"/>
 			<control caption=": هنا Torrent ت_خزين ملفات"/>
-			<control/>
-			<control/>
-			<control caption="_Torrent صانع"/>
-			<control/>
-			<control/>
+			<control caption="معا Torrents عمليات"/>
+			<control caption="إتصالات العميل"/>
+			<control caption="%"/>
 			<control caption="متتبع إفتراضي"/>
-			<control/>
+			<control caption="_Torrent صانع"/>
 		</dialog>
 		<dialog name="CProtocolsSettingsPage" cookie="BuSy" caption="بروتوكول">
 			<control caption=": المشترك Shareaza مستكشف بروتوكول بنية"/>
