--- a/Languages/default-cz.xml
+++ b/Languages/default-cz.xml
@@ -354,6 +354,7 @@
 			<button id="ID_NETWORK_G1" text="Gnutella1"/>
 			<button id="ID_NETWORK_ED2K" text="eDonkey"/>
 			<button id="ID_NETWORK_DC" text="DC++"/>
+			<button id="ID_NETWORK_BT" text="BitTorrent"/>
 			<separator/>
 			<button id="ID_NEIGHBOURS_SETTINGS" text="Nastavení"/>
 		</toolbar>
@@ -369,6 +370,7 @@
 			<button id="ID_NETWORK_G1" text="Gnutella1"/>
 			<button id="ID_NETWORK_ED2K" text="eDonkey"/>
 			<button id="ID_NETWORK_DC" text="DC++"/>
+			<button id="ID_NETWORK_BT" text="BitTorrent"/>
 			<separator/>
 			<button id="ID_NEIGHBOURS_SETTINGS" text="Nastavení"/>
 		</toolbar>
@@ -506,6 +508,7 @@
 					<item id="ID_NETWORK_G1" text="Připojit ke Gnutelle_1"/>
 					<item id="ID_NETWORK_ED2K" text="Připojit k _eDonkey"/>
 					<item id="ID_NETWORK_DC" text="Connect to _DC++"/>
+					<item id="ID_NETWORK_BT" text="Connect to _BitTorrent"/>
 				</menu>
 				<separator/>
 				<item id="ID_NETWORK_AUTO_CLOSE" text="Ukončit po _stažení"/>
@@ -543,7 +546,7 @@
 				<item id="ID_TOOLS_PROFILE" text="Upravit vlastní _profil..."/>
 				<item id="ID_TOOLS_WIZARD" text="Průvodce rychlým na_stavením..."/>
 				<separator/>
-				<item id="ID_TOOLS_SETTINGS" text="Nastavení _Shareazy..."/>
+				<item id="ID_TOOLS_SETTINGS" text="Nastavení _Shareazy..." shortcut="Ctrl+P"/>
 			</menu>
 			<menu text="_Nápověda">
 				<item id="ID_HELP_FAQ" text="Shareaza _FAQ"/>
@@ -583,6 +586,7 @@
 					<item id="ID_NETWORK_G1" text="Připojit ke Gnutelle_1"/>
 					<item id="ID_NETWORK_ED2K" text="Připojit k _eDonkey"/>
 					<item id="ID_NETWORK_DC" text="Connect to _DC++"/>
+					<item id="ID_NETWORK_BT" text="Connect to _BitTorrent"/>
 				</menu>
 				<separator/>
 				<item id="ID_NETWORK_CONNECT_TO" text="Připojit _ke..." shortcut="Ctrl+T"/>
@@ -641,7 +645,7 @@
 				<item id="ID_TOOLS_PROFILE" text="Upravit vlastní _profil..."/>
 				<item id="ID_TOOLS_WIZARD" text="Průvodce rychlým na_stavením..."/>
 				<separator/>
-				<item id="ID_TOOLS_SETTINGS" text="Nastavení _Shareazy..."/>
+				<item id="ID_TOOLS_SETTINGS" text="Nastavení _Shareazy..." shortcut="Ctrl+P"/>
 			</menu>
 			<menu text="_Okno">
 				<item id="ID_WINDOW_NAVBAR" text="Zobrazit horní _lištu s tlačítky"/>
@@ -695,6 +699,7 @@
 					<item id="ID_NETWORK_G1" text="Připojit ke Gnutelle_1"/>
 					<item id="ID_NETWORK_ED2K" text="Připojit k _eDonkey"/>
 					<item id="ID_NETWORK_DC" text="Connect to _DC++"/>
+					<item id="ID_NETWORK_BT" text="Connect to _BitTorrent"/>
 				</menu>
 				<separator/>
 				<item id="ID_NETWORK_AUTO_CLOSE" text="Ukončit po _stažení"/>
@@ -735,7 +740,7 @@
 				<item id="ID_TOOLS_PROFILE" text="Upravit vlastní _profil..."/>
 				<separator/>
 				<item id="ID_TOOLS_WIZARD" text="Průvodce rychlým na_stavením..."/>
-				<item id="ID_TOOLS_SETTINGS" text="Nastavení _Shareazy..."/>
+				<item id="ID_TOOLS_SETTINGS" text="Nastavení _Shareazy..." shortcut="Ctrl+P"/>
 			</menu>
 			<menu text="_Okno">
 				<item id="ID_WINDOW_CASCADE" text="_Full Screen"/>
@@ -1524,6 +1529,7 @@
 				<item id="ID_NETWORK_G1" text="Gnutella_1"/>
 				<item id="ID_NETWORK_ED2K" text="_eDonkey"/>
 				<item id="ID_NETWORK_DC" text="_DC++"/>
+				<item id="ID_NETWORK_BT" text="_BitTorrent"/>
 			</menu>
 			<menu text="_Monitor">
 				<item id="ID_NEIGHBOURS_VIEW_ALL" text="View _All Traffic"/>
@@ -2560,6 +2566,7 @@
 		<tip id="ID_NEIGHBOURS_VIEW_OUTGOING" message="Otevřít nové okno výpisu monitorování paketů odchozího provozu tohoto počítače."/>
 		<tip id="ID_NETWORK_AUTO_CLOSE" message="Automaticky zavřít Shareazu po dokončení přenosu."/>
 		<tip id="ID_NETWORK_BROWSE_TO" message="Prohlížet uživatele, ukázat jeho profil a sdílené soubory..."/>
+		<tip id="ID_NETWORK_BT" message="Connect to the BitTorrent network."/>
 		<tip id="ID_NETWORK_CHAT_TO" message="Open a chat session with a user..."/>
 		<tip id="ID_NETWORK_CONNECT" message="Připojit k síti."/>
 		<tip id="ID_NETWORK_CONNECT_TO" message="Ručně se připojit k hostiteli..."/>
@@ -3751,51 +3758,52 @@
 			<control caption="Leaf to Hub"/>
 			<control caption="Hub to Hub"/>
 		</dialog>
-		<dialog name="CDonkeySettingsPage" cookie="BuBuBuBuBuStEdmsStBuBuStEdmsStBuStBu" caption="eDonkey">
-			<control caption="Síť _eDonkey:"/>
+		<dialog name="CDonkeySettingsPage" cookie="BuBuBuEdmsBuEdmsBuBuBuStStBuStStBuSt" caption="eDonkey">
 			<control caption="Připojit se teď k eDonkey"/>
 			<control caption="Automaticky se připojit při spuštění"/>
-			<control caption="_Vyhledávací servery:"/>
 			<control caption="Vyhledat známé vzdálené servery v cache:"/>
-			<control caption="Zastav hledání po:"/>
 			<control/>
 			<control/>
-			<control caption="nalezených výsledcích."/>
 			<control caption="Získat aktualizovaný seznam serverů z připojeného serveru"/>
+			<control/>
+			<control/>
+			<control caption="Stáhnout..."/>
+			<control caption="Síť _eDonkey:"/>
+			<control caption="_Vyhledávací servery:"/>
+			<control caption="Zastav hledání po:"/>
+			<control caption="nalezených výsledcích."/>
 			<control caption="Připojení _klienta:"/>
 			<control caption="Nepřipojovat se více než k:"/>
-			<control/>
-			<control/>
 			<control caption="ostatním klientům eDonkey."/>
 			<control caption="Nás_troje eDonkey:"/>
 			<control caption="Stáhnout seznam serverů eDonkey z webu:"/>
-			<control caption="Stáhnout..."/>
 		</dialog>
-		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsStEdmsStBuEdmsStBuBuBuBuEdBuBuEdBuStEd" caption="BitTorrent">
-			<control caption="_Interface:"/>
-			<control caption="Zobrazit další prvky rozhraní BitTorrent"/>
-			<control caption="_Připojená stahování:"/>
+		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsEdmsBuEdmsBuBuEdBuEdBuEdBuBuBuStStStStBu" caption="BitTorrent">
+			<control caption="Always connect to BitTorrent"/>
+			<control caption="Connect to BitTorrent today"/>
+			<control caption="Enable BitTorrent DHT"/>
 			<control/>
 			<control/>
-			<control caption="Torrenty najednou"/>
 			<control/>
 			<control/>
-			<control caption="připojených klientů"/>
 			<control caption=" Vymazat stažené torrenty        Když procento sdílení dosáhne"/>
 			<control/>
 			<control/>
-			<control caption="%"/>
 			<control caption=" Dávat přednost zdrojům torrent"/>
-			<control caption="_EndGame:"/>
 			<control caption="Po dokončení torrentů umožnit režim EndGame"/>
+			<control/>
+			<control/>
+			<control/>
+			<control/>
+			<control/>
+			<control caption="_BitTorrent Network:"/>
+			<control caption="_Připojená stahování:"/>
 			<control caption="_Torrenty skladovat zde:"/>
-			<control/>
-			<control/>
-			<control caption="Vytvoření _Torrentu"/>
-			<control/>
-			<control/>
+			<control caption="Torrenty najednou"/>
+			<control caption="připojených klientů"/>
+			<control caption="%"/>
 			<control caption="_Standardní Tracker: "/>
-			<control/>
+			<control caption="Vytvoření _Torrentu"/>
 		</dialog>
 		<dialog name="CProtocolsSettingsPage" cookie="BuSy" caption="Protokoly">
 			<control caption="Shareaza Common Architecture Protocol Explorer:"/>
