--- a/Languages/default-ee.xml
+++ b/Languages/default-ee.xml
@@ -354,6 +354,7 @@
 			<button id="ID_NETWORK_G1" text="Gnutella1"/>
 			<button id="ID_NETWORK_ED2K" text="eDonkey2000"/>
 			<button id="ID_NETWORK_DC" text="DC++"/>
+			<button id="ID_NETWORK_BT" text="BitTorrent"/>
 			<separator/>
 			<button id="ID_NEIGHBOURS_SETTINGS" text="Seaded"/>
 		</toolbar>
@@ -369,6 +370,7 @@
 			<button id="ID_NETWORK_G1" text="Gnutella1"/>
 			<button id="ID_NETWORK_ED2K" text="eDonkey2000"/>
 			<button id="ID_NETWORK_DC" text="DC++"/>
+			<button id="ID_NETWORK_BT" text="BitTorrent"/>
 			<separator/>
 			<button id="ID_NEIGHBOURS_SETTINGS" text="Seaded"/>
 		</toolbar>
@@ -506,6 +508,7 @@
 					<item id="ID_NETWORK_G1" text="Ühenda Gnutella_1"/>
 					<item id="ID_NETWORK_ED2K" text="Ühenda _eDonkey2000"/>
 					<item id="ID_NETWORK_DC" text="Connect to _DC++"/>
+					<item id="ID_NETWORK_BT" text="Connect to _BitTorrent"/>
 				</menu>
 				<separator/>
 				<item id="ID_NETWORK_AUTO_CLOSE" text="Välju _Ülekande lõpus"/>
@@ -543,7 +546,7 @@
 				<item id="ID_TOOLS_PROFILE" text="Muuda Pr_ofiili..."/>
 				<item id="ID_TOOLS_WIZARD" text="Alguse A_biline..."/>
 				<separator/>
-				<item id="ID_TOOLS_SETTINGS" text="_Shareaza Seaded..."/>
+				<item id="ID_TOOLS_SETTINGS" text="_Shareaza Seaded..." shortcut="Ctrl+P"/>
 			</menu>
 			<menu text="_Abi">
 				<item id="ID_HELP_FAQ" text="Shareaza _KKK"/>
@@ -583,6 +586,7 @@
 					<item id="ID_NETWORK_G1" text="Ühenda Gnutella_1"/>
 					<item id="ID_NETWORK_ED2K" text="Ühenda _eDonkey2000"/>
 					<item id="ID_NETWORK_DC" text="Connect to _DC++"/>
+					<item id="ID_NETWORK_BT" text="Connect to _BitTorrent"/>
 				</menu>
 				<separator/>
 				<item id="ID_NETWORK_CONNECT_TO" text="Ühenda _Aadressil..." shortcut="Ctrl+T"/>
@@ -641,7 +645,7 @@
 				<item id="ID_TOOLS_PROFILE" text="Muuda Pr_ofiili..."/>
 				<item id="ID_TOOLS_WIZARD" text="Alguse A_biline..."/>
 				<separator/>
-				<item id="ID_TOOLS_SETTINGS" text="_Shareaza Seaded..."/>
+				<item id="ID_TOOLS_SETTINGS" text="_Shareaza Seaded..." shortcut="Ctrl+P"/>
 			</menu>
 			<menu text="_Aknad">
 				<item id="ID_WINDOW_NAVBAR" text="Näita _Navigatiooniriba"/>
@@ -695,6 +699,7 @@
 					<item id="ID_NETWORK_G1" text="Ühenda Gnutella_1"/>
 					<item id="ID_NETWORK_ED2K" text="Ühenda _eDonkey2000"/>
 					<item id="ID_NETWORK_DC" text="Connect to _DC++"/>
+					<item id="ID_NETWORK_BT" text="Connect to _BitTorrent"/>
 				</menu>
 				<separator/>
 				<item id="ID_NETWORK_AUTO_CLOSE" text="Välju _Ülekande Lõpus"/>
@@ -735,7 +740,7 @@
 				<item id="ID_TOOLS_PROFILE" text="Muuda Pr_ofiili..."/>
 				<separator/>
 				<item id="ID_TOOLS_WIZARD" text="Alguse A_biline..."/>
-				<item id="ID_TOOLS_SETTINGS" text="_Shareaza Seaded..."/>
+				<item id="ID_TOOLS_SETTINGS" text="_Shareaza Seaded..." shortcut="Ctrl+P"/>
 			</menu>
 			<menu text="_Aknad">
 				<item id="ID_WINDOW_CASCADE" text="_Full Screen"/>
@@ -1524,6 +1529,7 @@
 				<item id="ID_NETWORK_G1" text="Gnutella_1"/>
 				<item id="ID_NETWORK_ED2K" text="_eDonkey"/>
 				<item id="ID_NETWORK_DC" text="_DC++"/>
+				<item id="ID_NETWORK_BT" text="_BitTorrent"/>
 			</menu>
 			<menu text="_Monitor">
 				<item id="ID_NEIGHBOURS_VIEW_ALL" text="View _All Traffic"/>
@@ -2552,6 +2558,7 @@
 		<tip id="ID_NEIGHBOURS_VIEW_OUTGOING" message="Ava uus aken, et vaadata väljuvaid ühendusi."/>
 		<tip id="ID_NETWORK_AUTO_CLOSE" message="Auotmaatselt sule Shareaza, kui ülekanded on lõppenud."/>
 		<tip id="ID_NETWORK_BROWSE_TO" message="Sirvi kasutajat, Vaadates nende profiili ja jagatud faile..."/>
+		<tip id="ID_NETWORK_BT" message="Connect to the BitTorrent network."/>
 		<tip id="ID_NETWORK_CHAT_TO" message="Open a chat session with a user..."/>
 		<tip id="ID_NETWORK_CONNECT" message="Ühenda võrkku."/>
 		<tip id="ID_NETWORK_CONNECT_TO" message="Ühenda serveriga käsitsi..."/>
@@ -3743,51 +3750,52 @@
 			<control caption="Leaf to Hub"/>
 			<control caption="Hub to Hub"/>
 		</dialog>
-		<dialog name="CDonkeySettingsPage" cookie="BuBuBuBuBuStEdmsStBuBuStEdmsStBuStBu" caption="eDonkey2000">
-			<control caption="_eDonkey2000 Võrgustik:"/>
+		<dialog name="CDonkeySettingsPage" cookie="BuBuBuEdmsBuEdmsBuBuBuStStBuStStBuSt" caption="eDonkey2000">
 			<control caption="Ühenda eDonkey2000-ga täna"/>
 			<control caption="Ühenda automaatselt iga kord"/>
-			<control caption="_Üldine Otsing:"/>
 			<control caption="Otsi tuntud servereid, serverite võrgustikust:"/>
-			<control caption="Lõpeta otsing pärast:"/>
 			<control/>
 			<control/>
-			<control caption="tulemust."/>
 			<control caption="Receive and update server list from the connected server"/>
+			<control/>
+			<control/>
+			<control caption="Tõmba..."/>
+			<control caption="_eDonkey2000 Võrgustik:"/>
+			<control caption="_Üldine Otsing:"/>
+			<control caption="Lõpeta otsing pärast:"/>
+			<control caption="tulemust."/>
 			<control caption="_Kliendipoolsed Ühendused:"/>
 			<control caption="Ühenda kõige rohkem:"/>
-			<control/>
-			<control/>
 			<control caption="teise eDonkey kliendiga."/>
 			<control caption="eDonkey2000 _Tööriistad:"/>
 			<control caption="Tõmba weebist eDonkey2000 serverite nimekiri:"/>
-			<control caption="Tõmba..."/>
 		</dialog>
-		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsStEdmsStBuEdmsStBuBuBuBuEdBuBuEdBuStEd" caption="BitTorrent">
-			<control caption="_Kasutajaliides:"/>
-			<control caption="Näita lisa BitTorrenti kasutajaliidese elemente"/>
-			<control caption="_Allalaadimisühendused:"/>
+		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsEdmsBuEdmsBuBuEdBuEdBuEdBuBuBuStStStStBu" caption="BitTorrent">
+			<control caption="Always connect to BitTorrent"/>
+			<control caption="Connect to BitTorrent today"/>
+			<control caption="Enable BitTorrent DHT"/>
 			<control/>
 			<control/>
-			<control caption="Torrentit korraga"/>
 			<control/>
 			<control/>
-			<control caption="Kliendi ühendust"/>
 			<control caption=" Puhasta allalaaditud torrentid        Kui jagamissuhe jõuab"/>
 			<control/>
 			<control/>
-			<control caption="%"/>
 			<control caption=" Eelista torrenti allikaid"/>
-			<control caption="_EndGame:"/>
 			<control caption="Võimalda EndGame rešiim kui lõpetad torrente"/>
+			<control/>
+			<control/>
+			<control/>
+			<control/>
+			<control/>
+			<control caption="_BitTorrent Network:"/>
+			<control caption="_Allalaadimisühendused:"/>
 			<control caption="_Salvesta Torrentid Siia:"/>
-			<control/>
-			<control/>
-			<control caption="_Torrenti Looja"/>
-			<control/>
-			<control/>
+			<control caption="Torrentit korraga"/>
+			<control caption="Kliendi ühendust"/>
+			<control caption="%"/>
 			<control caption="Vaikimisi Jälitaja: "/>
-			<control/>
+			<control caption="_Torrenti Looja"/>
 		</dialog>
 		<dialog name="CProtocolsSettingsPage" cookie="BuSy" caption="Protolollid">
 			<control caption="Shareaza Üldehituse Protokollide Teave:"/>
