--- a/Languages/default-en.xml
+++ b/Languages/default-en.xml
@@ -367,6 +367,7 @@
 			<button id="ID_NETWORK_G1" text="Gnutella1"/>
 			<button id="ID_NETWORK_ED2K" text="eDonkey"/>
 			<button id="ID_NETWORK_DC" text="DC++"/>
+			<button id="ID_NETWORK_BT" text="BitTorrent"/>
 			<separator/>
 			<button id="ID_NEIGHBOURS_SETTINGS" text="Settings"/>
 		</toolbar>
@@ -382,6 +383,7 @@
 			<button id="ID_NETWORK_G1" text="Gnutella1"/>
 			<button id="ID_NETWORK_ED2K" text="eDonkey"/>
 			<button id="ID_NETWORK_DC" text="DC++"/>
+			<button id="ID_NETWORK_BT" text="BitTorrent"/>
 			<separator/>
 			<button id="ID_NEIGHBOURS_SETTINGS" text="Settings"/>
 		</toolbar>
@@ -519,6 +521,7 @@
 					<item id="ID_NETWORK_G1" text="Connect to Gnutella_1"/>
 					<item id="ID_NETWORK_ED2K" text="Connect to _eDonkey"/>
 					<item id="ID_NETWORK_DC" text="Connect to _DC++"/>
+					<item id="ID_NETWORK_BT" text="Connect to _BitTorrent"/>
 				</menu>
 				<separator/>
 				<item id="ID_NETWORK_AUTO_CLOSE" text="Exit _After Transfers"/>
@@ -556,7 +559,7 @@
 				<item id="ID_TOOLS_PROFILE" text="Edit My _Profile..."/>
 				<item id="ID_TOOLS_WIZARD" text="QuickStart _Wizard..."/>
 				<separator/>
-				<item id="ID_TOOLS_SETTINGS" text="_Shareaza Settings..."/>
+				<item id="ID_TOOLS_SETTINGS" text="_Shareaza Settings..." shortcut="Ctrl+P"/>
 			</menu>
 			<menu text="_Help">
 				<item id="ID_HELP_FAQ" text="Shareaza _FAQ"/>
@@ -596,6 +599,7 @@
 					<item id="ID_NETWORK_G1" text="Connect to Gnutella_1"/>
 					<item id="ID_NETWORK_ED2K" text="Connect to _eDonkey"/>
 					<item id="ID_NETWORK_DC" text="Connect to _DC++"/>
+					<item id="ID_NETWORK_BT" text="Connect to _BitTorrent"/>
 				</menu>
 				<separator/>
 				<item id="ID_NETWORK_CONNECT_TO" text="Connect _To..." shortcut="Ctrl+T"/>
@@ -654,7 +658,7 @@
 				<item id="ID_TOOLS_PROFILE" text="Edit My _Profile..."/>
 				<item id="ID_TOOLS_WIZARD" text="QuickStart _Wizard..."/>
 				<separator/>
-				<item id="ID_TOOLS_SETTINGS" text="_Shareaza Settings..."/>
+				<item id="ID_TOOLS_SETTINGS" text="_Shareaza Settings..." shortcut="Ctrl+P"/>
 			</menu>
 			<menu text="_Window">
 				<item id="ID_WINDOW_NAVBAR" text="Show _Navigation Bar"/>
@@ -708,6 +712,7 @@
 					<item id="ID_NETWORK_G1" text="Connect to Gnutella_1"/>
 					<item id="ID_NETWORK_ED2K" text="Connect to _eDonkey"/>
 					<item id="ID_NETWORK_DC" text="Connect to _DC++"/>
+					<item id="ID_NETWORK_BT" text="Connect to _BitTorrent"/>
 				</menu>
 				<separator/>
 				<item id="ID_NETWORK_AUTO_CLOSE" text="Close _After Transfers"/>
@@ -748,7 +753,7 @@
 				<item id="ID_TOOLS_PROFILE" text="Edit My _Profile..."/>
 				<separator/>
 				<item id="ID_TOOLS_WIZARD" text="QuickStart _Wizard..."/>
-				<item id="ID_TOOLS_SETTINGS" text="_Shareaza Settings..."/>
+				<item id="ID_TOOLS_SETTINGS" text="_Shareaza Settings..." shortcut="Ctrl+P"/>
 			</menu>
 			<menu text="_Window">
 				<item id="ID_WINDOW_CASCADE" text="_Full Screen"/>
@@ -1537,6 +1542,7 @@
 				<item id="ID_NETWORK_G1" text="Gnutella_1"/>
 				<item id="ID_NETWORK_ED2K" text="_eDonkey"/>
 				<item id="ID_NETWORK_DC" text="_DC++"/>
+				<item id="ID_NETWORK_BT" text="_BitTorrent"/>
 			</menu>
 			<menu text="_Monitor">
 				<item id="ID_NEIGHBOURS_VIEW_ALL" text="View _All Traffic"/>
@@ -2574,6 +2580,7 @@
 		<tip id="ID_NEIGHBOURS_VIEW_OUTGOING" message="Open a new Packet Dump window monitoring outgoing traffic to this neighbour."/>
 		<tip id="ID_NETWORK_AUTO_CLOSE" message="Automatically close Shareaza when transfers have completed."/>
 		<tip id="ID_NETWORK_BROWSE_TO" message="Browse a user, showing their profile and shared files..."/>
+		<tip id="ID_NETWORK_BT" message="Connect to the BitTorrent network."/>
 		<tip id="ID_NETWORK_CHAT_TO" message="Open a chat session with a user..."/>
 		<tip id="ID_NETWORK_CONNECT" message="Connect to selected networks."/>
 		<tip id="ID_NETWORK_CONNECT_TO" message="Manually connect to a host..."/>
@@ -3765,51 +3772,52 @@
 			<control caption="Peer to Peer:"/>
 			<control caption="_Link Compression:"/>
 		</dialog>
-		<dialog name="CDonkeySettingsPage" cookie="BuBuBuBuBuStEdmsStBuBuStEdmsStBuStBu" caption="eDonkey">
-			<control caption="_eDonkey Network:"/>
+		<dialog name="CDonkeySettingsPage" cookie="BuBuBuEdmsBuEdmsBuBuBuStStBuStStBuSt" caption="eDonkey">
 			<control caption="Always connect to eDonkey"/>
 			<control caption="Connect to eDonkey today"/>
-			<control caption="_Global Searching:"/>
 			<control caption="Search known remote servers in the server cache:"/>
-			<control caption="Stop searching after:"/>
 			<control/>
 			<control/>
-			<control caption="search results."/>
 			<control caption="Receive and update server list from the connected server"/>
+			<control/>
+			<control/>
+			<control caption="Download..."/>
+			<control caption="_eDonkey Network:"/>
+			<control caption="_Global Searching:"/>
+			<control caption="Stop searching after:"/>
+			<control caption="search results."/>
 			<control caption="_Client Link Connections:"/>
 			<control caption="Connect to no more than:"/>
-			<control/>
-			<control/>
 			<control caption="other eDonkey clients."/>
 			<control caption="eDonkey _Tools:"/>
 			<control caption="Download eDonkey server list from the web:"/>
-			<control caption="Download..."/>
 		</dialog>
-		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsStEdmsStBuEdmsStBuBuBuBuEdBuBuEdBuStEd" caption="BitTorrent">
-			<control caption="_Interface:"/>
-			<control caption="Display additional BitTorrent interface elements"/>
-			<control caption="_Download Connections:"/>
+		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsEdmsBuEdmsBuBuEdBuEdBuEdBuBuBuStStStStBu" caption="BitTorrent">
+			<control caption="Always connect to BitTorrent"/>
+			<control caption="Connect to BitTorrent today"/>
+			<control caption="Enable BitTorrent DHT"/>
 			<control/>
 			<control/>
-			<control caption="Torrents at once"/>
 			<control/>
 			<control/>
-			<control caption="Client connections"/>
 			<control caption="Clear downloaded torrents     When the share ratio reaches:"/>
 			<control/>
 			<control/>
-			<control caption="%"/>
 			<control caption="Prefer torrent sources"/>
-			<control caption="_EndGame:"/>
 			<control caption="Enable EndGame mode when completing torrents"/>
+			<control/>
+			<control/>
+			<control/>
+			<control/>
+			<control/>
+			<control caption="_BitTorrent Network:"/>
+			<control caption="_Download Connections:"/>
 			<control caption="_Store Torrents Here:"/>
-			<control/>
-			<control/>
-			<control caption="_Torrent Creator:"/>
-			<control/>
-			<control/>
+			<control caption="Torrents at once"/>
+			<control caption="Client connections"/>
+			<control caption="%"/>
 			<control caption="Default Tracker: "/>
-			<control/>
+			<control caption="_Torrent Creator:"/>
 		</dialog>
 		<dialog name="CProtocolsSettingsPage" cookie="BuSy" caption="Protocols">
 			<control caption="Shareaza Common Architecture Protocol Explorer:"/>
