--- a/Languages/default-es-mx.xml
+++ b/Languages/default-es-mx.xml
@@ -354,6 +354,7 @@
 			<button id="ID_NETWORK_G1" text="Gnutella1"/>
 			<button id="ID_NETWORK_ED2K" text="eDonkey2000"/>
 			<button id="ID_NETWORK_DC" text="DC++"/>
+			<button id="ID_NETWORK_BT" text="BitTorrent"/>
 			<separator/>
 			<button id="ID_NEIGHBOURS_SETTINGS" text="Configurar..."/>
 		</toolbar>
@@ -369,6 +370,7 @@
 			<button id="ID_NETWORK_G1" text="Gnutella1"/>
 			<button id="ID_NETWORK_ED2K" text="eDonkey2000"/>
 			<button id="ID_NETWORK_DC" text="DC++"/>
+			<button id="ID_NETWORK_BT" text="BitTorrent"/>
 			<separator/>
 			<button id="ID_NEIGHBOURS_SETTINGS" text="Configurar..."/>
 		</toolbar>
@@ -506,6 +508,7 @@
 					<item id="ID_NETWORK_G1" text="Conectar a _Gnutella 1"/>
 					<item id="ID_NETWORK_ED2K" text="Conectar a _eDonkey2000"/>
 					<item id="ID_NETWORK_DC" text="Connect to _DC++"/>
+					<item id="ID_NETWORK_BT" text="Connect to _BitTorrent"/>
 				</menu>
 				<separator/>
 				<item id="ID_NETWORK_AUTO_CLOSE" text="_Salir Después de Transferencias"/>
@@ -543,7 +546,7 @@
 				<item id="ID_TOOLS_PROFILE" text="_Editar Mi Perfil..."/>
 				<item id="ID_TOOLS_WIZARD" text="_Configuración Rápida..."/>
 				<separator/>
-				<item id="ID_TOOLS_SETTINGS" text="_Configuración de Shareaza..."/>
+				<item id="ID_TOOLS_SETTINGS" text="_Configuración de Shareaza..." shortcut="Ctrl+P"/>
 			</menu>
 			<menu text="_Ayuda">
 				<item id="ID_HELP_FAQ" text="Guía de Usuarios Shareaza"/>
@@ -583,6 +586,7 @@
 					<item id="ID_NETWORK_G1" text="Conectar a _Gnutella 1"/>
 					<item id="ID_NETWORK_ED2K" text="Conectar a _eDonkey2000"/>
 					<item id="ID_NETWORK_DC" text="Connect to _DC++"/>
+					<item id="ID_NETWORK_BT" text="Connect to _BitTorrent"/>
 				</menu>
 				<separator/>
 				<item id="ID_NETWORK_CONNECT_TO" text="Conectar _A..." shortcut="Ctrl+T"/>
@@ -641,7 +645,7 @@
 				<item id="ID_TOOLS_PROFILE" text="_Editar Mi Perfil..."/>
 				<item id="ID_TOOLS_WIZARD" text="_Configuración Rápida..."/>
 				<separator/>
-				<item id="ID_TOOLS_SETTINGS" text="_Configuración de Shareaza..."/>
+				<item id="ID_TOOLS_SETTINGS" text="_Configuración de Shareaza..." shortcut="Ctrl+P"/>
 			</menu>
 			<menu text="_Ventana">
 				<item id="ID_WINDOW_NAVBAR" text="Mostrar _Barra de Navegación"/>
@@ -695,6 +699,7 @@
 					<item id="ID_NETWORK_G1" text="Conectar a _Gnutella 1"/>
 					<item id="ID_NETWORK_ED2K" text="Conectar a _eDonkey2000"/>
 					<item id="ID_NETWORK_DC" text="Connect to _DC++"/>
+					<item id="ID_NETWORK_BT" text="Connect to _BitTorrent"/>
 				</menu>
 				<separator/>
 				<item id="ID_NETWORK_AUTO_CLOSE" text="_Salir Después de Transferencias"/>
@@ -735,7 +740,7 @@
 				<item id="ID_TOOLS_PROFILE" text="_Editar Mi Perfil..."/>
 				<separator/>
 				<item id="ID_TOOLS_WIZARD" text="_Configuración Rápida..."/>
-				<item id="ID_TOOLS_SETTINGS" text="_Configuración de Shareaza..."/>
+				<item id="ID_TOOLS_SETTINGS" text="_Configuración de Shareaza..." shortcut="Ctrl+P"/>
 			</menu>
 			<menu text="_Ventana">
 				<item id="ID_WINDOW_CASCADE" text="_Full Screen"/>
@@ -1524,6 +1529,7 @@
 				<item id="ID_NETWORK_G1" text="Gnutella_1"/>
 				<item id="ID_NETWORK_ED2K" text="_eDonkey"/>
 				<item id="ID_NETWORK_DC" text="_DC++"/>
+				<item id="ID_NETWORK_BT" text="_BitTorrent"/>
 			</menu>
 			<menu text="_Monitor">
 				<item id="ID_NEIGHBOURS_VIEW_ALL" text="View _All Traffic"/>
@@ -2553,6 +2559,7 @@
 		<tip id="ID_NEIGHBOURS_VIEW_OUTGOING" message="Abre un monitor de paquetes para el tráfico saliente de este vecino."/>
 		<tip id="ID_NETWORK_AUTO_CLOSE" message="Cerrar Shareaza al terminar las transferencias."/>
 		<tip id="ID_NETWORK_BROWSE_TO" message="Explorar al usuario, muestra sus archivos y perfil..."/>
+		<tip id="ID_NETWORK_BT" message="Connect to the BitTorrent network."/>
 		<tip id="ID_NETWORK_CHAT_TO" message="Open a chat session with a user..."/>
 		<tip id="ID_NETWORK_CONNECT" message="Conectar a la red o redes."/>
 		<tip id="ID_NETWORK_CONNECT_TO" message="Conectar manualmente al usuario..."/>
@@ -3744,51 +3751,52 @@
 			<control caption="Leaf a Hub"/>
 			<control caption="Hub a Hub"/>
 		</dialog>
-		<dialog name="CDonkeySettingsPage" cookie="BuBuBuBuBuStEdmsStBuBuStEdmsStBuStBu" caption="eDonkey2000">
-			<control caption="Red de _eDonkey2000:"/>
+		<dialog name="CDonkeySettingsPage" cookie="BuBuBuEdmsBuEdmsBuBuBuStStBuStStBuSt" caption="eDonkey2000">
 			<control caption="Conectar solo por esta sesión"/>
 			<control caption="Conectar siempre"/>
-			<control caption="Búsquedas _Globales:"/>
 			<control caption="Buscar en servidores del cache:"/>
-			<control caption="Parar después de:"/>
 			<control/>
 			<control/>
-			<control caption="resultados."/>
 			<control caption="Recibe y actualiza la lista de servidores del servidor conectado"/>
+			<control/>
+			<control/>
+			<control caption="Descargar..."/>
+			<control caption="Red de _eDonkey2000:"/>
+			<control caption="Búsquedas _Globales:"/>
+			<control caption="Parar después de:"/>
+			<control caption="resultados."/>
 			<control caption="Límite de _conexiones con otros clientes:"/>
 			<control caption="No conectar con más de:"/>
-			<control/>
-			<control/>
 			<control caption="clientes de eDonkey al la vez."/>
 			<control caption="_Herramientas de eDonkey2000:"/>
 			<control caption="Descargar lista de servidores de eDonkey2000 de la web:"/>
-			<control caption="Descargar..."/>
 		</dialog>
-		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsStEdmsStBuEdmsStBuBuBuBuEdBuBuEdBuStEd" caption="BitTorrent">
-			<control caption="_Interface:"/>
-			<control caption="Mostrar elementos adicionales BitTorrent en la interface"/>
-			<control caption="_Conexiones de descarga:"/>
+		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsEdmsBuEdmsBuBuEdBuEdBuEdBuBuBuStStStStBu" caption="BitTorrent">
+			<control caption="Always connect to BitTorrent"/>
+			<control caption="Connect to BitTorrent today"/>
+			<control caption="Enable BitTorrent DHT"/>
 			<control/>
 			<control/>
-			<control caption="Torrents al mismo tiempo"/>
 			<control/>
 			<control/>
-			<control caption="Conexiones de cliente"/>
 			<control caption=" Limpiar torrents descargados"/>
 			<control/>
 			<control/>
-			<control caption="%"/>
 			<control caption=" Fuentes torrent de preferencia"/>
-			<control caption="_EndGame:"/>
 			<control caption="Habilitar modo EndGame al completar torrents"/>
+			<control/>
+			<control/>
+			<control/>
+			<control/>
+			<control/>
+			<control caption="_BitTorrent Network:"/>
+			<control caption="_Conexiones de descarga:"/>
 			<control caption="_Empieza torrents aquí "/>
-			<control/>
-			<control/>
-			<control caption="_Creador de Torrent"/>
-			<control/>
-			<control/>
+			<control caption="Torrents al mismo tiempo"/>
+			<control caption="Conexiones de cliente"/>
+			<control caption="%"/>
 			<control caption="_Tracker por defecto:"/>
-			<control/>
+			<control caption="_Creador de Torrent"/>
 		</dialog>
 		<dialog name="CProtocolsSettingsPage" cookie="BuSy" caption="Protocolos">
 			<control caption="Shareaza Common Architecture Protocol Explorer:"/>
