--- a/Languages/default-fi.xml
+++ b/Languages/default-fi.xml
@@ -354,6 +354,7 @@
 			<button id="ID_NETWORK_G1" text="Gnutella1"/>
 			<button id="ID_NETWORK_ED2K" text="eDonkey"/>
 			<button id="ID_NETWORK_DC" text="DC++"/>
+			<button id="ID_NETWORK_BT" text="BitTorrent"/>
 			<separator/>
 			<button id="ID_NEIGHBOURS_SETTINGS" text="Asetukset"/>
 		</toolbar>
@@ -369,6 +370,7 @@
 			<button id="ID_NETWORK_G1" text="Gnutella1"/>
 			<button id="ID_NETWORK_ED2K" text="eDonkey"/>
 			<button id="ID_NETWORK_DC" text="DC++"/>
+			<button id="ID_NETWORK_BT" text="BitTorrent"/>
 			<separator/>
 			<button id="ID_NEIGHBOURS_SETTINGS" text="Asetukset"/>
 		</toolbar>
@@ -506,6 +508,7 @@
 					<item id="ID_NETWORK_G1" text="Yhdistä Gnutella_1"/>
 					<item id="ID_NETWORK_ED2K" text="Yhdistä _eDonkey2000"/>
 					<item id="ID_NETWORK_DC" text="Connect to _DC++"/>
+					<item id="ID_NETWORK_BT" text="Connect to _BitTorrent"/>
 				</menu>
 				<separator/>
 				<item id="ID_NETWORK_AUTO_CLOSE" text="Poistu Siirtojen Jälkeen"/>
@@ -543,7 +546,7 @@
 				<item id="ID_TOOLS_PROFILE" text="Editoi _Profiiliani"/>
 				<item id="ID_TOOLS_WIZARD" text="QuickStart _Aloitus..."/>
 				<separator/>
-				<item id="ID_TOOLS_SETTINGS" text="_Shareaza Asetukset..."/>
+				<item id="ID_TOOLS_SETTINGS" text="_Shareaza Asetukset..." shortcut="Ctrl+P"/>
 			</menu>
 			<menu text="_Ohje">
 				<item id="ID_HELP_FAQ" text="Shareaza _UKK (en)"/>
@@ -583,6 +586,7 @@
 					<item id="ID_NETWORK_G1" text="Yhdistä Gnutella_1"/>
 					<item id="ID_NETWORK_ED2K" text="Yhdistä _eDonkey2000"/>
 					<item id="ID_NETWORK_DC" text="Connect to _DC++"/>
+					<item id="ID_NETWORK_BT" text="Connect to _BitTorrent"/>
 				</menu>
 				<separator/>
 				<item id="ID_NETWORK_CONNECT_TO" text="Yhdistä..." shortcut="Ctrl+T"/>
@@ -641,7 +645,7 @@
 				<item id="ID_TOOLS_PROFILE" text="Editoi _Profiiliani"/>
 				<item id="ID_TOOLS_WIZARD" text="QuickStart _Aloitus..."/>
 				<separator/>
-				<item id="ID_TOOLS_SETTINGS" text="_Shareaza Asetukset..."/>
+				<item id="ID_TOOLS_SETTINGS" text="_Shareaza Asetukset..." shortcut="Ctrl+P"/>
 			</menu>
 			<menu text="_Ikkuna">
 				<item id="ID_WINDOW_NAVBAR" text="Näytä _Navigaatio Palkki"/>
@@ -695,6 +699,7 @@
 					<item id="ID_NETWORK_G1" text="Yhdistä Gnutella_1"/>
 					<item id="ID_NETWORK_ED2K" text="Yhdistä _eDonkey2000"/>
 					<item id="ID_NETWORK_DC" text="Connect to _DC++"/>
+					<item id="ID_NETWORK_BT" text="Connect to _BitTorrent"/>
 				</menu>
 				<separator/>
 				<item id="ID_NETWORK_AUTO_CLOSE" text="Sulje _Siirtojen Jälkeen"/>
@@ -735,7 +740,7 @@
 				<item id="ID_TOOLS_PROFILE" text="Editoi _Profiiliani"/>
 				<separator/>
 				<item id="ID_TOOLS_WIZARD" text="QuickStart _Aloitus..."/>
-				<item id="ID_TOOLS_SETTINGS" text="_Shareaza Asetukset..."/>
+				<item id="ID_TOOLS_SETTINGS" text="_Shareaza Asetukset..." shortcut="Ctrl+P"/>
 			</menu>
 			<menu text="_Ikkuna">
 				<item id="ID_WINDOW_CASCADE" text="_Full Screen"/>
@@ -1524,6 +1529,7 @@
 				<item id="ID_NETWORK_G1" text="Gnutella_1"/>
 				<item id="ID_NETWORK_ED2K" text="_eDonkey"/>
 				<item id="ID_NETWORK_DC" text="_DC++"/>
+				<item id="ID_NETWORK_BT" text="_BitTorrent"/>
 			</menu>
 			<menu text="_Monitor">
 				<item id="ID_NEIGHBOURS_VIEW_ALL" text="View _All Traffic"/>
@@ -2556,6 +2562,7 @@
 		<tip id="ID_NEIGHBOURS_VIEW_OUTGOING" message="Open a new Packet Dump window monitoring outgoing traffic to this neighbour."/>
 		<tip id="ID_NETWORK_AUTO_CLOSE" message="Automatically close Shareaza when transfers have completed."/>
 		<tip id="ID_NETWORK_BROWSE_TO" message="Browse a user, showing their profile and shared files..."/>
+		<tip id="ID_NETWORK_BT" message="Connect to the BitTorrent network."/>
 		<tip id="ID_NETWORK_CHAT_TO" message="Open a chat session with a user..."/>
 		<tip id="ID_NETWORK_CONNECT" message="Connect to selected networks."/>
 		<tip id="ID_NETWORK_CONNECT_TO" message="Manually connect to a host..."/>
@@ -3747,51 +3754,52 @@
 			<control caption="Peer to Peer:"/>
 			<control caption="_Link Compression:"/>
 		</dialog>
-		<dialog name="CDonkeySettingsPage" cookie="BuBuBuBuBuStEdmsStBuBuStEdmsStBuStBu" caption="eDonkey">
-			<control caption="_eDonkey Network:"/>
+		<dialog name="CDonkeySettingsPage" cookie="BuBuBuEdmsBuEdmsBuBuBuStStBuStStBuSt" caption="eDonkey">
 			<control caption="Always connect to eDonkey"/>
 			<control caption="Connect to eDonkey today"/>
-			<control caption="_Global Searching:"/>
 			<control caption="Search known remote servers in the server cache:"/>
-			<control caption="Stop searching after:"/>
 			<control/>
 			<control/>
-			<control caption="search results."/>
 			<control caption="Receive and update server list from the connected server"/>
+			<control/>
+			<control/>
+			<control caption="Download..."/>
+			<control caption="_eDonkey Network:"/>
+			<control caption="_Global Searching:"/>
+			<control caption="Stop searching after:"/>
+			<control caption="search results."/>
 			<control caption="_Client Link Connections:"/>
 			<control caption="Connect to no more than:"/>
-			<control/>
-			<control/>
 			<control caption="other eDonkey clients."/>
 			<control caption="eDonkey _Tools:"/>
 			<control caption="Download eDonkey server list from the web:"/>
-			<control caption="Download..."/>
 		</dialog>
-		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsStEdmsStBuEdmsStBuBuBuBuEdBuBuEdBuStEd" caption="BitTorrent">
-			<control caption="_Interface:"/>
-			<control caption="Display additional BitTorrent interface elements"/>
-			<control caption="_Download Connections:"/>
+		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsEdmsBuEdmsBuBuEdBuEdBuEdBuBuBuStStStStBu" caption="BitTorrent">
+			<control caption="Always connect to BitTorrent"/>
+			<control caption="Connect to BitTorrent today"/>
+			<control caption="Enable BitTorrent DHT"/>
 			<control/>
 			<control/>
-			<control caption="Torrents at once"/>
 			<control/>
 			<control/>
-			<control caption="Client connections"/>
 			<control caption="Clear downloaded torrents     When the share ratio reaches:"/>
 			<control/>
 			<control/>
-			<control caption="%"/>
 			<control caption="Prefer torrent sources"/>
-			<control caption="_EndGame:"/>
 			<control caption="Enable EndGame mode when completing torrents"/>
+			<control/>
+			<control/>
+			<control/>
+			<control/>
+			<control/>
+			<control caption="_BitTorrent Network:"/>
+			<control caption="_Download Connections:"/>
 			<control caption="_Store Torrents Here:"/>
-			<control/>
-			<control/>
-			<control caption="_Torrent Creator:"/>
-			<control/>
-			<control/>
+			<control caption="Torrents at once"/>
+			<control caption="Client connections"/>
+			<control caption="%"/>
 			<control caption="Default Tracker: "/>
-			<control/>
+			<control caption="_Torrent Creator:"/>
 		</dialog>
 		<dialog name="CProtocolsSettingsPage" cookie="BuSy" caption="Protocols">
 			<control caption="Shareaza Common Architecture Protocol Explorer:"/>
