--- a/Languages/default-hr.xml
+++ b/Languages/default-hr.xml
@@ -354,6 +354,7 @@
 			<button id="ID_NETWORK_G1" text="Gnutella1"/>
 			<button id="ID_NETWORK_ED2K" text="eDonkey2000"/>
 			<button id="ID_NETWORK_DC" text="DC++"/>
+			<button id="ID_NETWORK_BT" text="BitTorrent"/>
 			<separator/>
 			<button id="ID_NEIGHBOURS_SETTINGS" text="Postavke"/>
 		</toolbar>
@@ -369,6 +370,7 @@
 			<button id="ID_NETWORK_G1" text="Gnutella1"/>
 			<button id="ID_NETWORK_ED2K" text="eDonkey2000"/>
 			<button id="ID_NETWORK_DC" text="DC++"/>
+			<button id="ID_NETWORK_BT" text="BitTorrent"/>
 			<separator/>
 			<button id="ID_NEIGHBOURS_SETTINGS" text="Postavke"/>
 		</toolbar>
@@ -506,6 +508,7 @@
 					<item id="ID_NETWORK_G1" text="Spoji se na Gnutellu_1"/>
 					<item id="ID_NETWORK_ED2K" text="Spoji se na _eDonkey2000"/>
 					<item id="ID_NETWORK_DC" text="Connect to _DC++"/>
+					<item id="ID_NETWORK_BT" text="Connect to _BitTorrent"/>
 				</menu>
 				<separator/>
 				<item id="ID_NETWORK_AUTO_CLOSE" text="Izađi po završetku razmjene"/>
@@ -543,7 +546,7 @@
 				<item id="ID_TOOLS_PROFILE" text="Izmjeni Moj _Profil..."/>
 				<item id="ID_TOOLS_WIZARD" text="Brzo i Lagano - Pomoćnik..."/>
 				<separator/>
-				<item id="ID_TOOLS_SETTINGS" text="_Shareazine Postavke..."/>
+				<item id="ID_TOOLS_SETTINGS" text="_Shareazine Postavke..." shortcut="Ctrl+P"/>
 			</menu>
 			<menu text="Pomoć">
 				<item id="ID_HELP_FAQ" text="Shareazin _FAQ"/>
@@ -583,6 +586,7 @@
 					<item id="ID_NETWORK_G1" text="Spoji se na Gnutellu_1"/>
 					<item id="ID_NETWORK_ED2K" text="Spoji se na _eDonkey2000"/>
 					<item id="ID_NETWORK_DC" text="Connect to _DC++"/>
+					<item id="ID_NETWORK_BT" text="Connect to _BitTorrent"/>
 				</menu>
 				<separator/>
 				<item id="ID_NETWORK_CONNECT_TO" text="Spoji se na..." shortcut="Ctrl+T"/>
@@ -641,7 +645,7 @@
 				<item id="ID_TOOLS_PROFILE" text="Izmjeni Moj _Profil..."/>
 				<item id="ID_TOOLS_WIZARD" text="Brzo i Lagano - Pomoćnik..."/>
 				<separator/>
-				<item id="ID_TOOLS_SETTINGS" text="_Shareazine Postavke..."/>
+				<item id="ID_TOOLS_SETTINGS" text="_Shareazine Postavke..." shortcut="Ctrl+P"/>
 			</menu>
 			<menu text="Prozori">
 				<item id="ID_WINDOW_NAVBAR" text="Navigacijska Traka"/>
@@ -695,6 +699,7 @@
 					<item id="ID_NETWORK_G1" text="Spoji se na Gnutellu_1"/>
 					<item id="ID_NETWORK_ED2K" text="Spoji se na _eDonkey2000"/>
 					<item id="ID_NETWORK_DC" text="Connect to _DC++"/>
+					<item id="ID_NETWORK_BT" text="Connect to _BitTorrent"/>
 				</menu>
 				<separator/>
 				<item id="ID_NETWORK_AUTO_CLOSE" text="Z_atvori Po Završetku"/>
@@ -735,7 +740,7 @@
 				<item id="ID_TOOLS_PROFILE" text="Izmjeni Moj _Profil..."/>
 				<separator/>
 				<item id="ID_TOOLS_WIZARD" text="Brzo i Lagano - Pomoćnik..."/>
-				<item id="ID_TOOLS_SETTINGS" text="_Shareazine Postavke..."/>
+				<item id="ID_TOOLS_SETTINGS" text="_Shareazine Postavke..." shortcut="Ctrl+P"/>
 			</menu>
 			<menu text="Prozori">
 				<item id="ID_WINDOW_CASCADE" text="_Full Screen"/>
@@ -1524,6 +1529,7 @@
 				<item id="ID_NETWORK_G1" text="Gnutella_1"/>
 				<item id="ID_NETWORK_ED2K" text="_eDonkey"/>
 				<item id="ID_NETWORK_DC" text="_DC++"/>
+				<item id="ID_NETWORK_BT" text="_BitTorrent"/>
 			</menu>
 			<menu text="_Monitor">
 				<item id="ID_NEIGHBOURS_VIEW_ALL" text="View _All Traffic"/>
@@ -2552,6 +2558,7 @@
 		<tip id="ID_NEIGHBOURS_VIEW_OUTGOING" message="Open a new Packet Dump window monitoring outgoing traffic to this neighbour."/>
 		<tip id="ID_NETWORK_AUTO_CLOSE" message="Automatski zatvori Shareazu kada se završi razmjena."/>
 		<tip id="ID_NETWORK_BROWSE_TO" message="Browse a user, showing their profile and shared files..."/>
+		<tip id="ID_NETWORK_BT" message="Connect to the BitTorrent network."/>
 		<tip id="ID_NETWORK_CHAT_TO" message="Open a chat session with a user..."/>
 		<tip id="ID_NETWORK_CONNECT" message="Spoji se na mrežu."/>
 		<tip id="ID_NETWORK_CONNECT_TO" message="Manually connect to a host..."/>
@@ -3743,51 +3750,52 @@
 			<control caption="Leaf u Hub"/>
 			<control caption="Hub u Hub"/>
 		</dialog>
-		<dialog name="CDonkeySettingsPage" cookie="BuBuBuBuBuStEdmsStBuBuStEdmsStBuStBu" caption="eDonkey2000">
-			<control caption="_eDonkey2000 Mreža:"/>
+		<dialog name="CDonkeySettingsPage" cookie="BuBuBuEdmsBuEdmsBuBuBuStStBuStStBuSt" caption="eDonkey2000">
 			<control caption="Spoji se na eDonkey2000"/>
 			<control caption="Spoji se svaki put(Automatski)"/>
-			<control caption="Kod pretraživanja:"/>
 			<control caption="Traži samo u poznatim serverima u server cachu:"/>
-			<control caption="Zaustavi potragu nakon:"/>
 			<control/>
 			<control/>
-			<control caption="rezultata potrage."/>
 			<control caption="_Client Link Veze:"/>
+			<control/>
+			<control/>
+			<control caption="Skini eDonkey2000 listu servera sa neta:"/>
+			<control caption="_eDonkey2000 Mreža:"/>
+			<control caption="Kod pretraživanja:"/>
+			<control caption="Zaustavi potragu nakon:"/>
+			<control caption="rezultata potrage."/>
 			<control caption="Ne spajaj se na više od:"/>
 			<control caption="Connect to no more than:"/>
-			<control/>
-			<control/>
 			<control caption="eDonkey2000 Ala_ti:"/>
 			<control caption="Ubaci eDonkey/eMule djelomična skidanja (.part):"/>
 			<control caption="Ubaci..."/>
-			<control caption="Skini eDonkey2000 listu servera sa neta:"/>
 		</dialog>
-		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsStEdmsStBuEdmsStBuBuBuBuEdBuBuEdBuStEd" caption="BitTorrent">
-			<control caption="Sučelje:"/>
-			<control caption="Prikaži dodatne BitTorrent elemente"/>
-			<control caption="Postavke ski_danja:"/>
+		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsEdmsBuEdmsBuBuEdBuEdBuEdBuBuBuStStStStBu" caption="BitTorrent">
+			<control caption="Always connect to BitTorrent"/>
+			<control caption="Connect to BitTorrent today"/>
+			<control caption="Enable BitTorrent DHT"/>
 			<control/>
 			<control/>
-			<control caption="Istovremenih Torrenta"/>
 			<control/>
 			<control/>
-			<control caption="Klijent veze"/>
 			<control caption=" Makni skinunte torrente        Kada omjer djeljenja dođe do"/>
 			<control/>
 			<control/>
-			<control caption="%"/>
 			<control caption=" Preferiraj torrent izvore"/>
-			<control caption="_EndGame:"/>
 			<control caption="Omoguči EndGame način prilikom dovršenja torrentsa"/>
+			<control/>
+			<control/>
+			<control/>
+			<control/>
+			<control/>
+			<control caption="_BitTorrent Network:"/>
+			<control caption="Postavke ski_danja:"/>
 			<control caption="Ovdje _Spremi Torrente::"/>
-			<control/>
-			<control/>
-			<control caption="_Torrent Creator"/>
-			<control/>
-			<control/>
+			<control caption="Istovremenih Torrenta"/>
+			<control caption="Klijent veze"/>
+			<control caption="%"/>
 			<control caption="Default Tracker:"/>
-			<control/>
+			<control caption="_Torrent Creator"/>
 		</dialog>
 		<dialog name="CProtocolsSettingsPage" cookie="BuSy" caption="Protokoli">
 			<control caption="Shareaza Common Architecture Protocol Explorer:"/>
