--- a/Languages/default-lt.xml
+++ b/Languages/default-lt.xml
@@ -354,6 +354,7 @@
 			<button id="ID_NETWORK_G1" text="Gnutella1"/>
 			<button id="ID_NETWORK_ED2K" text="eDonkey"/>
 			<button id="ID_NETWORK_DC" text="DC++"/>
+			<button id="ID_NETWORK_BT" text="BitTorrent"/>
 			<separator/>
 			<button id="ID_NEIGHBOURS_SETTINGS" text="Nuostatos"/>
 		</toolbar>
@@ -369,6 +370,7 @@
 			<button id="ID_NETWORK_G1" text="Gnutella1"/>
 			<button id="ID_NETWORK_ED2K" text="eDonkey"/>
 			<button id="ID_NETWORK_DC" text="DC++"/>
+			<button id="ID_NETWORK_BT" text="BitTorrent"/>
 			<separator/>
 			<button id="ID_NEIGHBOURS_SETTINGS" text="Nuostatos"/>
 		</toolbar>
@@ -506,6 +508,7 @@
 					<item id="ID_NETWORK_G1" text="Jungtis prie Gnutella_1"/>
 					<item id="ID_NETWORK_ED2K" text="Jungtis prie _eDonkey"/>
 					<item id="ID_NETWORK_DC" text="Connect to _DC++"/>
+					<item id="ID_NETWORK_BT" text="Connect to _BitTorrent"/>
 				</menu>
 				<separator/>
 				<item id="ID_NETWORK_AUTO_CLOSE" text="Išeiti _baigus siųsti"/>
@@ -543,7 +546,7 @@
 				<item id="ID_TOOLS_PROFILE" text="Taisyti savo _profilį..."/>
 				<item id="ID_TOOLS_WIZARD" text="_Nuostatų vedlys..."/>
 				<separator/>
-				<item id="ID_TOOLS_SETTINGS" text="„_Shareaza“ nuostatos..."/>
+				<item id="ID_TOOLS_SETTINGS" text="„_Shareaza“ nuostatos..." shortcut="Ctrl+P"/>
 			</menu>
 			<menu text="Ži_nynas">
 				<item id="ID_HELP_FAQ" text="„Shareaza“ _DUK"/>
@@ -583,6 +586,7 @@
 					<item id="ID_NETWORK_G1" text="Jungtis prie Gnutella_1"/>
 					<item id="ID_NETWORK_ED2K" text="Jungtis prie _eDonkey"/>
 					<item id="ID_NETWORK_DC" text="Connect to _DC++"/>
+					<item id="ID_NETWORK_BT" text="Connect to _BitTorrent"/>
 				</menu>
 				<separator/>
 				<item id="ID_NETWORK_CONNECT_TO" text="Jung_tis prie..." shortcut="Ctrl+T"/>
@@ -641,7 +645,7 @@
 				<item id="ID_TOOLS_PROFILE" text="Taisyti savo _profilį..."/>
 				<item id="ID_TOOLS_WIZARD" text="_Nuostatų vedlys..."/>
 				<separator/>
-				<item id="ID_TOOLS_SETTINGS" text="„_Shareaza“ nuostatos..."/>
+				<item id="ID_TOOLS_SETTINGS" text="„_Shareaza“ nuostatos..." shortcut="Ctrl+P"/>
 			</menu>
 			<menu text="_Langas">
 				<item id="ID_WINDOW_NAVBAR" text="Rodyti _naršymo juostą"/>
@@ -695,6 +699,7 @@
 					<item id="ID_NETWORK_G1" text="Jungtis prie Gnutella_1"/>
 					<item id="ID_NETWORK_ED2K" text="Jungtis prie _eDonkey"/>
 					<item id="ID_NETWORK_DC" text="Connect to _DC++"/>
+					<item id="ID_NETWORK_BT" text="Connect to _BitTorrent"/>
 				</menu>
 				<separator/>
 				<item id="ID_NETWORK_AUTO_CLOSE" text="Išeiti _baigus siųsti"/>
@@ -735,7 +740,7 @@
 				<item id="ID_TOOLS_PROFILE" text="Taisyti savo _profilį..."/>
 				<separator/>
 				<item id="ID_TOOLS_WIZARD" text="_Nuostatų vedlys..."/>
-				<item id="ID_TOOLS_SETTINGS" text="„_Shareaza“ nuostatos..."/>
+				<item id="ID_TOOLS_SETTINGS" text="„_Shareaza“ nuostatos..." shortcut="Ctrl+P"/>
 			</menu>
 			<menu text="_Langas">
 				<item id="ID_WINDOW_CASCADE" text="_Visas ekranas"/>
@@ -1524,6 +1529,7 @@
 				<item id="ID_NETWORK_G1" text="Gnutella_1"/>
 				<item id="ID_NETWORK_ED2K" text="_eDonkey"/>
 				<item id="ID_NETWORK_DC" text="_DC++"/>
+				<item id="ID_NETWORK_BT" text="_BitTorrent"/>
 			</menu>
 			<menu text="_Monitorius">
 				<item id="ID_NEIGHBOURS_VIEW_ALL" text="Rodyti _visą srautą"/>
@@ -2551,6 +2557,7 @@
 		<tip id="ID_NEIGHBOURS_VIEW_OUTGOING" message="Atverti naują „Paketų išvesties“ langą šio kaimyno išeinačiam srautui stebėti."/>
 		<tip id="ID_NETWORK_AUTO_CLOSE" message="Automatiškai išeiti iš „Shareaza“ programos, kai bus baigti visi atsisiuntimai/išsiuntimai."/>
 		<tip id="ID_NETWORK_BROWSE_TO" message="Peržiūrėti naudotojo profilį ir bendrintus failus..."/>
+		<tip id="ID_NETWORK_BT" message="Connect to the BitTorrent network."/>
 		<tip id="ID_NETWORK_CHAT_TO" message="Open a chat session with a user..."/>
 		<tip id="ID_NETWORK_CONNECT" message="Jungtis prie pasirinktų tinklų."/>
 		<tip id="ID_NETWORK_CONNECT_TO" message="Jungtis prie adresato rankiniu būdu..."/>
@@ -3742,51 +3749,52 @@
 			<control caption="Partnerių į partnerį:"/>
 			<control caption="_Duomenų suspaudimas jungtyse:"/>
 		</dialog>
-		<dialog name="CDonkeySettingsPage" cookie="BuBuBuBuBuStEdmsStBuBuStEdmsStBuStBu" caption="eDonkey">
-			<control caption="_eDonkey tinklas:"/>
+		<dialog name="CDonkeySettingsPage" cookie="BuBuBuEdmsBuEdmsBuBuBuStStBuStStBuSt" caption="eDonkey">
 			<control caption="Visada jungtis prie eDonkey"/>
 			<control caption="Jungtis prie eDonkey šiandien"/>
-			<control caption="_Globalinė paieška:"/>
 			<control caption="Ieškoti žinomų nutolusių serverių serverio laikinojoje talpykloje:"/>
-			<control caption="Stabdyti paieška po:"/>
 			<control/>
 			<control/>
-			<control caption="radinių(-io)."/>
 			<control caption="Gauti ir atnaujinti serverių sąrašą iš susijungusio serverio"/>
+			<control/>
+			<control/>
+			<control caption="Parsisiųsti..."/>
+			<control caption="_eDonkey tinklas:"/>
+			<control caption="_Globalinė paieška:"/>
+			<control caption="Stabdyti paieška po:"/>
+			<control caption="radinių(-io)."/>
 			<control caption="_Kliento susijungimai:"/>
 			<control caption="Jungtis nedaugiau kaip prie:"/>
-			<control/>
-			<control/>
 			<control caption="kitų eDonkey klientų(-o)."/>
 			<control caption="eDonkey į_rankiai:"/>
 			<control caption="eDonkey serverių sąrašo parsisiuntimas iš interneto:"/>
-			<control caption="Parsisiųsti..."/>
 		</dialog>
-		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsStEdmsStBuEdmsStBuBuBuBuEdBuBuEdBuStEd" caption="BitTorrent">
-			<control caption="_Sąsaja:"/>
-			<control caption="Rodyti papildomus BitTorrent sąsajos elementus"/>
-			<control caption="_Atsisiuntimų susijungimai:"/>
+		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsEdmsBuEdmsBuBuEdBuEdBuEdBuBuBuStStStStBu" caption="BitTorrent">
+			<control caption="Always connect to BitTorrent"/>
+			<control caption="Connect to BitTorrent today"/>
+			<control caption="Enable BitTorrent DHT"/>
 			<control/>
 			<control/>
-			<control caption="Torrent failų per kartą"/>
 			<control/>
 			<control/>
-			<control caption="Klientų susijungimų"/>
 			<control caption=" Valyti atsiųstus torrent,    kai bendrinimo santykis pasiekia"/>
 			<control/>
 			<control/>
-			<control caption="%"/>
 			<control caption=" Teikti pirmenybę torrent šaltiniams"/>
-			<control caption="_EndGame (paspartinimas):"/>
 			<control caption="Įgalinti BitTorrent „EndGame“ veikseną baigiant siųstis failus"/>
+			<control/>
+			<control/>
+			<control/>
+			<control/>
+			<control/>
+			<control caption="_BitTorrent Network:"/>
+			<control caption="_Atsisiuntimų susijungimai:"/>
 			<control caption="_Laikyti torrent failus čia:"/>
-			<control/>
-			<control/>
-			<control caption="_Torrent failų kūrimo programa"/>
-			<control/>
-			<control/>
+			<control caption="Torrent failų per kartą"/>
+			<control caption="Klientų susijungimų"/>
+			<control caption="%"/>
 			<control caption="Numatytasis seklys: "/>
-			<control/>
+			<control caption="_Torrent failų kūrimo programa"/>
 		</dialog>
 		<dialog name="CProtocolsSettingsPage" cookie="BuSy" caption="Protokolai">
 			<control caption="„Shareaza“ bendros architektūros protokolų naršyklė:"/>
