--- a/Languages/default-nl.xml
+++ b/Languages/default-nl.xml
@@ -354,6 +354,7 @@
 			<button id="ID_NETWORK_G1" text="Gnutella1"/>
 			<button id="ID_NETWORK_ED2K" text="eDonkey"/>
 			<button id="ID_NETWORK_DC" text="DC++"/>
+			<button id="ID_NETWORK_BT" text="BitTorrent"/>
 			<separator/>
 			<button id="ID_NEIGHBOURS_SETTINGS" text="Instellingen"/>
 		</toolbar>
@@ -369,6 +370,7 @@
 			<button id="ID_NETWORK_G1" text="Gnutella1"/>
 			<button id="ID_NETWORK_ED2K" text="eDonkey"/>
 			<button id="ID_NETWORK_DC" text="DC++"/>
+			<button id="ID_NETWORK_BT" text="BitTorrent"/>
 			<separator/>
 			<button id="ID_NEIGHBOURS_SETTINGS" text="Instellingen"/>
 		</toolbar>
@@ -506,6 +508,7 @@
 					<item id="ID_NETWORK_G1" text="Verbinden met Gnutella_1"/>
 					<item id="ID_NETWORK_ED2K" text="Verbinden met _eDonkey"/>
 					<item id="ID_NETWORK_DC" text="Connect to _DC++"/>
+					<item id="ID_NETWORK_BT" text="Connect to _BitTorrent"/>
 				</menu>
 				<separator/>
 				<item id="ID_NETWORK_AUTO_CLOSE" text="Afsluiten na ver_keer"/>
@@ -543,7 +546,7 @@
 				<item id="ID_TOOLS_PROFILE" text="Mijn _profiel aanpassen..."/>
 				<item id="ID_TOOLS_WIZARD" text="SnelStart _wizard..."/>
 				<separator/>
-				<item id="ID_TOOLS_SETTINGS" text="Shareaza _instellingen..."/>
+				<item id="ID_TOOLS_SETTINGS" text="Shareaza _instellingen..." shortcut="Ctrl+P"/>
 			</menu>
 			<menu text="_Hulp">
 				<item id="ID_HELP_FAQ" text="Shareaza _FAQ"/>
@@ -583,6 +586,7 @@
 					<item id="ID_NETWORK_G1" text="Verbinden met Gnutella_1"/>
 					<item id="ID_NETWORK_ED2K" text="Verbinden met _eDonkey"/>
 					<item id="ID_NETWORK_DC" text="Connect to _DC++"/>
+					<item id="ID_NETWORK_BT" text="Connect to _BitTorrent"/>
 				</menu>
 				<separator/>
 				<item id="ID_NETWORK_CONNECT_TO" text="Verbinden _met..." shortcut="Ctrl+T"/>
@@ -641,7 +645,7 @@
 				<item id="ID_TOOLS_PROFILE" text="Mijn _profiel aanpassen..."/>
 				<item id="ID_TOOLS_WIZARD" text="SnelStart _wizard..."/>
 				<separator/>
-				<item id="ID_TOOLS_SETTINGS" text="Shareaza _instellingen..."/>
+				<item id="ID_TOOLS_SETTINGS" text="Shareaza _instellingen..." shortcut="Ctrl+P"/>
 			</menu>
 			<menu text="_Venster">
 				<item id="ID_WINDOW_NAVBAR" text="_Navigatiebalk tonen"/>
@@ -695,6 +699,7 @@
 					<item id="ID_NETWORK_G1" text="Verbinden met Gnutella_1"/>
 					<item id="ID_NETWORK_ED2K" text="Verbinden met _eDonkey"/>
 					<item id="ID_NETWORK_DC" text="Connect to _DC++"/>
+					<item id="ID_NETWORK_BT" text="Connect to _BitTorrent"/>
 				</menu>
 				<separator/>
 				<item id="ID_NETWORK_AUTO_CLOSE" text="Afsluiten na ver_keer"/>
@@ -735,7 +740,7 @@
 				<item id="ID_TOOLS_PROFILE" text="Mijn _profiel aanpassen..."/>
 				<separator/>
 				<item id="ID_TOOLS_WIZARD" text="SnelStart _wizard..."/>
-				<item id="ID_TOOLS_SETTINGS" text="Shareaza _instellingen..."/>
+				<item id="ID_TOOLS_SETTINGS" text="Shareaza _instellingen..." shortcut="Ctrl+P"/>
 			</menu>
 			<menu text="_Venster">
 				<item id="ID_WINDOW_CASCADE" text="V_olledig scherm"/>
@@ -1524,6 +1529,7 @@
 				<item id="ID_NETWORK_G1" text="Gnutella_1"/>
 				<item id="ID_NETWORK_ED2K" text="_eDonkey"/>
 				<item id="ID_NETWORK_DC" text="_DC++"/>
+				<item id="ID_NETWORK_BT" text="_BitTorrent"/>
 			</menu>
 			<menu text="_Monitor">
 				<item id="ID_NEIGHBOURS_VIEW_ALL" text="Toon _Al Het Verkeer"/>
@@ -2558,6 +2564,7 @@
 		<tip id="ID_NEIGHBOURS_VIEW_OUTGOING" message="Een nieuw pakket dump venster openen om uitgaand verkeer naar deze bron te controleren."/>
 		<tip id="ID_NETWORK_AUTO_CLOSE" message="Shareaza automatisch afsluiten als het dataverkeer afgerond is."/>
 		<tip id="ID_NETWORK_BROWSE_TO" message="Doorzoek een gebruiker, om zijn profiel en gedeelde bestanden te bekijken..."/>
+		<tip id="ID_NETWORK_BT" message="Connect to the BitTorrent network."/>
 		<tip id="ID_NETWORK_CHAT_TO" message="Open een chatsessie met een gebruiker..."/>
 		<tip id="ID_NETWORK_CONNECT" message="Verbinden met het netwerk."/>
 		<tip id="ID_NETWORK_CONNECT_TO" message="Zelf verbinding maken met een gastheer..."/>
@@ -3749,51 +3756,52 @@
 			<control caption="Peer naar Peer:"/>
 			<control caption="_Linkcompressie:"/>
 		</dialog>
-		<dialog name="CDonkeySettingsPage" cookie="BuBuBuBuBuStEdmsStBuBuStEdmsStBuStBu" caption="eDonkey">
-			<control caption="_eDonkey netwerk:"/>
+		<dialog name="CDonkeySettingsPage" cookie="BuBuBuEdmsBuEdmsBuBuBuStStBuStStBuSt" caption="eDonkey">
 			<control caption="Altijd verbinden met eDonkey"/>
 			<control caption="Nu verbinden met eDonkey"/>
-			<control caption="_Server instellingen:"/>
 			<control caption="Zoek bekende verre servers in de servercache:"/>
-			<control caption="Stop met zoeken na:"/>
 			<control/>
 			<control/>
-			<control caption="zoekresultaten."/>
 			<control caption="Ontvang en werk de server lijst bij via de verbonden server."/>
+			<control/>
+			<control/>
+			<control caption="Downloaden"/>
+			<control caption="_eDonkey netwerk:"/>
+			<control caption="_Server instellingen:"/>
+			<control caption="Stop met zoeken na:"/>
+			<control caption="zoekresultaten."/>
 			<control caption="_eDonkey Connecties:"/>
 			<control caption="Verbindt met niet meer dan:"/>
-			<control/>
-			<control/>
 			<control caption="andere eDonkey cliënten."/>
 			<control caption="eDonkey _hulpmiddelen:"/>
 			<control caption="eDonkey Serverlijst downloaden van het internet:"/>
-			<control caption="Downloaden"/>
 		</dialog>
-		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsStEdmsStBuEdmsStBuBuBuBuEdBuBuEdBuStEd" caption="BitTorrent">
-			<control caption="_Omgeving:"/>
-			<control caption="Laat extra BitTorrent besturingselementen zien"/>
-			<control caption="_Download verbindingen:"/>
+		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsEdmsBuEdmsBuBuEdBuEdBuEdBuBuBuStStStStBu" caption="BitTorrent">
+			<control caption="Always connect to BitTorrent"/>
+			<control caption="Connect to BitTorrent today"/>
+			<control caption="Enable BitTorrent DHT"/>
 			<control/>
 			<control/>
-			<control caption="torrents tegelijkertijd"/>
 			<control/>
 			<control/>
-			<control caption="cliënt verbindingen"/>
 			<control caption="Wis gedownloade torrents     Wanneer deze deelverhouding is bereikt:"/>
 			<control/>
 			<control/>
-			<control caption="%"/>
 			<control caption=" Verkies torrent bronnen"/>
-			<control caption="_EndGame:"/>
 			<control caption="Activeer EndGame Modus bij het afmaken van torrents"/>
+			<control/>
+			<control/>
+			<control/>
+			<control/>
+			<control/>
+			<control caption="_BitTorrent Network:"/>
+			<control caption="_Download verbindingen:"/>
 			<control caption="_Bewaar torrents hier:"/>
-			<control/>
-			<control/>
-			<control caption="_Torrent maker"/>
-			<control/>
-			<control/>
+			<control caption="torrents tegelijkertijd"/>
+			<control caption="cliënt verbindingen"/>
+			<control caption="%"/>
 			<control caption="Standaard tracker: "/>
-			<control/>
+			<control caption="_Torrent maker"/>
 		</dialog>
 		<dialog name="CProtocolsSettingsPage" cookie="BuSy" caption="Protocollen">
 			<control caption="Shareaza's algemene architectuur protocolverkenner:"/>
