--- a/Languages/default-pl.xml
+++ b/Languages/default-pl.xml
@@ -354,6 +354,7 @@
 			<button id="ID_NETWORK_G1" text="Gnutella1"/>
 			<button id="ID_NETWORK_ED2K" text="eDonkey"/>
 			<button id="ID_NETWORK_DC" text="DC++"/>
+			<button id="ID_NETWORK_BT" text="BitTorrent"/>
 			<separator/>
 			<button id="ID_NEIGHBOURS_SETTINGS" text="Ustawienia"/>
 		</toolbar>
@@ -369,6 +370,7 @@
 			<button id="ID_NETWORK_G1" text="Gnutella1"/>
 			<button id="ID_NETWORK_ED2K" text="eDonkey"/>
 			<button id="ID_NETWORK_DC" text="DC++"/>
+			<button id="ID_NETWORK_BT" text="BitTorrent"/>
 			<separator/>
 			<button id="ID_NEIGHBOURS_SETTINGS" text="Ustawienia"/>
 		</toolbar>
@@ -506,6 +508,7 @@
 					<item id="ID_NETWORK_G1" text="Połącz z Gnutella_1"/>
 					<item id="ID_NETWORK_ED2K" text="Połącz z _eDonkey"/>
 					<item id="ID_NETWORK_DC" text="Connect to _DC++"/>
+					<item id="ID_NETWORK_BT" text="Connect to _BitTorrent"/>
 				</menu>
 				<separator/>
 				<item id="ID_NETWORK_AUTO_CLOSE" text="Zamknij po zakończeniu pobrań(?)"/>
@@ -543,7 +546,7 @@
 				<item id="ID_TOOLS_PROFILE" text="Edytuj mój profil..."/>
 				<item id="ID_TOOLS_WIZARD" text="Kreator Szybkiego Startu..."/>
 				<separator/>
-				<item id="ID_TOOLS_SETTINGS" text="Ustawienia Shareazy..."/>
+				<item id="ID_TOOLS_SETTINGS" text="Ustawienia Shareazy..." shortcut="Ctrl+P"/>
 			</menu>
 			<menu text="Pomoc">
 				<item id="ID_HELP_FAQ" text="FAQ"/>
@@ -583,6 +586,7 @@
 					<item id="ID_NETWORK_G1" text="Połącz z Gnutella_1"/>
 					<item id="ID_NETWORK_ED2K" text="Połącz z _eDonkey"/>
 					<item id="ID_NETWORK_DC" text="Connect to _DC++"/>
+					<item id="ID_NETWORK_BT" text="Connect to _BitTorrent"/>
 				</menu>
 				<separator/>
 				<item id="ID_NETWORK_CONNECT_TO" text="Połącz z..." shortcut="Ctrl+T"/>
@@ -641,7 +645,7 @@
 				<item id="ID_TOOLS_PROFILE" text="Edytuj mój profil..."/>
 				<item id="ID_TOOLS_WIZARD" text="Kreator Szybkiego Startu..."/>
 				<separator/>
-				<item id="ID_TOOLS_SETTINGS" text="Ustawienia Shareazy..."/>
+				<item id="ID_TOOLS_SETTINGS" text="Ustawienia Shareazy..." shortcut="Ctrl+P"/>
 			</menu>
 			<menu text="Okno">
 				<item id="ID_WINDOW_NAVBAR" text="Pokaż pasek nawigacyjny"/>
@@ -695,6 +699,7 @@
 					<item id="ID_NETWORK_G1" text="Połącz z Gnutella_1"/>
 					<item id="ID_NETWORK_ED2K" text="Połącz z _eDonkey"/>
 					<item id="ID_NETWORK_DC" text="Connect to _DC++"/>
+					<item id="ID_NETWORK_BT" text="Connect to _BitTorrent"/>
 				</menu>
 				<separator/>
 				<item id="ID_NETWORK_AUTO_CLOSE" text="Zakończ po dokończeniu pobrań"/>
@@ -735,7 +740,7 @@
 				<item id="ID_TOOLS_PROFILE" text="Edytuj mój profil..."/>
 				<separator/>
 				<item id="ID_TOOLS_WIZARD" text="Kreator Szybkiego Startu..."/>
-				<item id="ID_TOOLS_SETTINGS" text="Ustawienia Shareazy..."/>
+				<item id="ID_TOOLS_SETTINGS" text="Ustawienia Shareazy..." shortcut="Ctrl+P"/>
 			</menu>
 			<menu text="Okno">
 				<item id="ID_WINDOW_CASCADE" text="_Full Screen"/>
@@ -1524,6 +1529,7 @@
 				<item id="ID_NETWORK_G1" text="Gnutella_1"/>
 				<item id="ID_NETWORK_ED2K" text="_eDonkey"/>
 				<item id="ID_NETWORK_DC" text="_DC++"/>
+				<item id="ID_NETWORK_BT" text="_BitTorrent"/>
 			</menu>
 			<menu text="Monitor">
 				<item id="ID_NEIGHBOURS_VIEW_ALL" text="Pokaż wszystkie pakiety"/>
@@ -2559,6 +2565,7 @@
 		<tip id="ID_NEIGHBOURS_VIEW_OUTGOING" message="Otwórz nowe okno zrzutu pakietów monitorujące ruch wychodzący od tego użytkownika (sąsiada)."/>
 		<tip id="ID_NETWORK_AUTO_CLOSE" message="Automatycznie zamknij Shareazę kiedy zakończą się wszystkie pobierania."/>
 		<tip id="ID_NETWORK_BROWSE_TO" message="Przeglądaj użytkownika, pokaż jego profil i udostępnione pliki..."/>
+		<tip id="ID_NETWORK_BT" message="Connect to the BitTorrent network."/>
 		<tip id="ID_NETWORK_CHAT_TO" message="Open a chat session with a user..."/>
 		<tip id="ID_NETWORK_CONNECT" message="Podłącz się do wybranych sieci."/>
 		<tip id="ID_NETWORK_CONNECT_TO" message="Ręcznie podłącz do hosta..."/>
@@ -3750,51 +3757,52 @@
 			<control caption="Liść z Hubem"/>
 			<control caption="Hub z Hubem"/>
 		</dialog>
-		<dialog name="CDonkeySettingsPage" cookie="BuBuBuBuBuStEdmsStBuBuStEdmsStBuStBu" caption="eDonkey">
-			<control caption="Sieć eDonkey:"/>
+		<dialog name="CDonkeySettingsPage" cookie="BuBuBuEdmsBuEdmsBuBuBuStStBuStStBuSt" caption="eDonkey">
 			<control caption="Zawsze włączaj się do eDonkey"/>
 			<control caption="Włącz się do eDonkey dzisiaj"/>
-			<control caption="Globalne Wyszukiwanie:"/>
 			<control caption="Przeszukaj znane zdalne serwery w cache'u serwera:"/>
-			<control caption="Zatrzymaj wyszukiwanie po:"/>
 			<control/>
 			<control/>
-			<control caption="wynikach."/>
 			<control caption="Połączenia z innymi klientami:"/>
+			<control/>
+			<control/>
+			<control caption="Pobierz..."/>
+			<control caption="Sieć eDonkey:"/>
+			<control caption="Globalne Wyszukiwanie:"/>
+			<control caption="Zatrzymaj wyszukiwanie po:"/>
+			<control caption="wynikach."/>
 			<control caption="Połączenia łącza klienta:"/>
 			<control caption="Nie łącz z więcej niż:"/>
-			<control/>
-			<control/>
 			<control caption="innymi klientami eDonkey."/>
 			<control caption="Narzędzia eDonkey:"/>
 			<control caption="Pobierz listę serwerów eDonkey z sieci:"/>
-			<control caption="Pobierz..."/>
 		</dialog>
-		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsStEdmsStBuEdmsStBuBuBuBuEdBuBuEdBuStEd" caption="BitTorrent">
-			<control caption="Interfejs"/>
-			<control caption="Pokaż dodatkowe elementy interfejsu BitTorrent"/>
-			<control caption="Połączenia pobierające:"/>
+		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsEdmsBuEdmsBuBuEdBuEdBuEdBuBuBuStStStStBu" caption="BitTorrent">
+			<control caption="Always connect to BitTorrent"/>
+			<control caption="Connect to BitTorrent today"/>
+			<control caption="Enable BitTorrent DHT"/>
 			<control/>
 			<control/>
-			<control caption="Torrentów równocześnie"/>
 			<control/>
 			<control/>
-			<control caption="Połączeń z innymi klientami"/>
 			<control caption="Wyczyść pobrane torrenty                    Kiedy share ratio osiągnie"/>
 			<control/>
 			<control/>
-			<control caption="%"/>
 			<control caption="Preferuj źródła torrentu"/>
-			<control caption="GraKońcowa:"/>
 			<control caption="Włącz tryb GryKońcowej, gdy Shareaza kończy pobierać torrenty"/>
+			<control/>
+			<control/>
+			<control/>
+			<control/>
+			<control/>
+			<control caption="_BitTorrent Network:"/>
+			<control caption="Połączenia pobierające:"/>
 			<control caption="Przechowuj Torrenty tutaj:"/>
-			<control/>
-			<control/>
-			<control caption="Twórca Torrentów"/>
-			<control/>
-			<control/>
+			<control caption="Torrentów równocześnie"/>
+			<control caption="Połączeń z innymi klientami"/>
+			<control caption="%"/>
 			<control caption="Domyślny Tracker:"/>
-			<control/>
+			<control caption="Twórca Torrentów"/>
 		</dialog>
 		<dialog name="CProtocolsSettingsPage" cookie="BuSy" caption="Protokoły">
 			<control caption="Przeglądarka Protokołu Wspólnej Architektury Shareazy:"/>
