--- a/Languages/default-sv.xml
+++ b/Languages/default-sv.xml
@@ -354,6 +354,7 @@
 			<button id="ID_NETWORK_G1" text="Gnutella1"/>
 			<button id="ID_NETWORK_ED2K" text="eDonkey"/>
 			<button id="ID_NETWORK_DC" text="DC++"/>
+			<button id="ID_NETWORK_BT" text="BitTorrent"/>
 			<separator/>
 			<button id="ID_NEIGHBOURS_SETTINGS" text="Inställningar"/>
 		</toolbar>
@@ -369,6 +370,7 @@
 			<button id="ID_NETWORK_G1" text="Gnutella1"/>
 			<button id="ID_NETWORK_ED2K" text="eDonkey"/>
 			<button id="ID_NETWORK_DC" text="DC++"/>
+			<button id="ID_NETWORK_BT" text="BitTorrent"/>
 			<separator/>
 			<button id="ID_NEIGHBOURS_SETTINGS" text="Inställningar"/>
 		</toolbar>
@@ -506,6 +508,7 @@
 					<item id="ID_NETWORK_G1" text="Anslut till Gnutella_1"/>
 					<item id="ID_NETWORK_ED2K" text="Anslut till _eDonkey"/>
 					<item id="ID_NETWORK_DC" text="Connect to _DC++"/>
+					<item id="ID_NETWORK_BT" text="Connect to _BitTorrent"/>
 				</menu>
 				<separator/>
 				<item id="ID_NETWORK_AUTO_CLOSE" text="Avsluta _efter överföringar"/>
@@ -543,7 +546,7 @@
 				<item id="ID_TOOLS_PROFILE" text="Redigera _min profil"/>
 				<item id="ID_TOOLS_WIZARD" text="Snabbstarts_guide"/>
 				<separator/>
-				<item id="ID_TOOLS_SETTINGS" text="_Inställningar…"/>
+				<item id="ID_TOOLS_SETTINGS" text="_Inställningar…" shortcut="Ctrl+P"/>
 			</menu>
 			<menu text="_Hjälp">
 				<item id="ID_HELP_FAQ" text="Shareaza _FAQ"/>
@@ -583,6 +586,7 @@
 					<item id="ID_NETWORK_G1" text="Anslut till Gnutella_1"/>
 					<item id="ID_NETWORK_ED2K" text="Anslut till _eDonkey"/>
 					<item id="ID_NETWORK_DC" text="Connect to _DC++"/>
+					<item id="ID_NETWORK_BT" text="Connect to _BitTorrent"/>
 				</menu>
 				<separator/>
 				<item id="ID_NETWORK_CONNECT_TO" text="Anslut _till…" shortcut="Ctrl+T"/>
@@ -641,7 +645,7 @@
 				<item id="ID_TOOLS_PROFILE" text="Redigera _min profil"/>
 				<item id="ID_TOOLS_WIZARD" text="Snabbstarts_guide"/>
 				<separator/>
-				<item id="ID_TOOLS_SETTINGS" text="_Inställningar…"/>
+				<item id="ID_TOOLS_SETTINGS" text="_Inställningar…" shortcut="Ctrl+P"/>
 			</menu>
 			<menu text="_Fönster">
 				<item id="ID_WINDOW_NAVBAR" text="Visa _navigationsfält"/>
@@ -695,6 +699,7 @@
 					<item id="ID_NETWORK_G1" text="Anslut till Gnutella_1"/>
 					<item id="ID_NETWORK_ED2K" text="Anslut till _eDonkey"/>
 					<item id="ID_NETWORK_DC" text="Connect to _DC++"/>
+					<item id="ID_NETWORK_BT" text="Connect to _BitTorrent"/>
 				</menu>
 				<separator/>
 				<item id="ID_NETWORK_AUTO_CLOSE" text="Stäng _efter överföringar"/>
@@ -735,7 +740,7 @@
 				<item id="ID_TOOLS_PROFILE" text="Redigera _min profil"/>
 				<separator/>
 				<item id="ID_TOOLS_WIZARD" text="Snabbstarts_guide"/>
-				<item id="ID_TOOLS_SETTINGS" text="_Inställningar…"/>
+				<item id="ID_TOOLS_SETTINGS" text="_Inställningar…" shortcut="Ctrl+P"/>
 			</menu>
 			<menu text="_Fönster">
 				<item id="ID_WINDOW_CASCADE" text="_Helskärm"/>
@@ -1524,6 +1529,7 @@
 				<item id="ID_NETWORK_G1" text="Gnutella_1"/>
 				<item id="ID_NETWORK_ED2K" text="_eDonkey"/>
 				<item id="ID_NETWORK_DC" text="_DC++"/>
+				<item id="ID_NETWORK_BT" text="_BitTorrent"/>
 			</menu>
 			<menu text="_Monitor">
 				<item id="ID_NEIGHBOURS_VIEW_ALL" text="View _All Traffic"/>
@@ -2554,6 +2560,7 @@ Du kan undersöka varje källa för att se hur högt upp i kön du befinner dig.
 		<tip id="ID_NEIGHBOURS_VIEW_OUTGOING" message="Öppna en ny paketdumpsmintor för utgående trafik till denna granne."/>
 		<tip id="ID_NETWORK_AUTO_CLOSE" message="Avsluta Shareaza när överföringarna är klara."/>
 		<tip id="ID_NETWORK_BROWSE_TO" message="Visa en användares profil och utdelade filer…"/>
+		<tip id="ID_NETWORK_BT" message="Connect to the BitTorrent network."/>
 		<tip id="ID_NETWORK_CHAT_TO" message="Open a chat session with a user..."/>
 		<tip id="ID_NETWORK_CONNECT" message="Anslut till nätverket."/>
 		<tip id="ID_NETWORK_CONNECT_TO" message="Ansluter manuellt till värden…"/>
@@ -3745,51 +3752,52 @@ Du kan undersöka varje källa för att se hur högt upp i kön du befinner dig.
 			<control caption="Löv till nav"/>
 			<control caption="Nav till nav"/>
 		</dialog>
-		<dialog name="CDonkeySettingsPage" cookie="BuBuBuBuBuStEdmsStBuBuStEdmsStBuStBu" caption="eDonkey">
-			<control caption="_eDonkey-nätverk"/>
+		<dialog name="CDonkeySettingsPage" cookie="BuBuBuEdmsBuEdmsBuBuBuStStBuStStBuSt" caption="eDonkey">
 			<control caption="Anslut till eDonkey idag"/>
 			<control caption="Anslut alltid automatiskt"/>
-			<control caption="_Globala sökningar:"/>
 			<control caption="Sök efter kända fjärrservrar i denna servercache:"/>
-			<control caption="Sluta söka efter:"/>
 			<control/>
 			<control/>
-			<control caption="sökresultat."/>
 			<control caption="Ta emot och uppdatera serverlistan frn den anslutana servern"/>
+			<control/>
+			<control/>
+			<control caption="Ladda ned…"/>
+			<control caption="_eDonkey-nätverk"/>
+			<control caption="_Globala sökningar:"/>
+			<control caption="Sluta söka efter:"/>
+			<control caption="sökresultat."/>
 			<control caption="_Länkanslutningar:"/>
 			<control caption="Anslut inte till fler än:"/>
-			<control/>
-			<control/>
 			<control caption="andra eDonkey-klienter."/>
 			<control caption="eDonkey-_verktyg:"/>
 			<control caption="Ladda ned serverlista för eDonkey från webben:"/>
-			<control caption="Ladda ned…"/>
 		</dialog>
-		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsStEdmsStBuEdmsStBuBuBuBuEdBuBuEdBuStEd" caption="BitTorrent">
-			<control caption="_Gränssnitt:"/>
-			<control caption="Visa ytterligare gränssnittselement för BitTorrent"/>
-			<control caption="_Nedladdningsanslutning:"/>
+		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsEdmsBuEdmsBuBuEdBuEdBuEdBuBuBuStStStStBu" caption="BitTorrent">
+			<control caption="Always connect to BitTorrent"/>
+			<control caption="Connect to BitTorrent today"/>
+			<control caption="Enable BitTorrent DHT"/>
 			<control/>
 			<control/>
-			<control caption="Torrents direkt"/>
 			<control/>
 			<control/>
-			<control caption="Klientanslutningar"/>
 			<control caption=" Radera frdiga torrents        När delningsproportionen uppnår"/>
 			<control/>
 			<control/>
-			<control caption="%"/>
 			<control caption=" Föredra torrentkällor"/>
-			<control caption="_Slutspel:"/>
 			<control caption="Aktivera slutspelsläge när nedladdning av torrents slutförs"/>
+			<control/>
+			<control/>
+			<control/>
+			<control/>
+			<control/>
+			<control caption="_BitTorrent Network:"/>
+			<control caption="_Nedladdningsanslutning:"/>
 			<control caption="_Lagra torrents här:"/>
-			<control/>
-			<control/>
-			<control caption="_Torrentskapare"/>
-			<control/>
-			<control/>
+			<control caption="Torrents direkt"/>
+			<control caption="Klientanslutningar"/>
+			<control caption="%"/>
 			<control caption="Förvald spårare:"/>
-			<control/>
+			<control caption="_Torrentskapare"/>
 		</dialog>
 		<dialog name="CProtocolsSettingsPage" cookie="BuSy" caption="Protokoll">
 			<control caption="Shareazas gemensamma protokollutforskare:"/>
